@@ -1,13 +1,11 @@
 package org.prebid.server.hooks.modules.ortb2.blocking.core.util;
 
-import org.apache.commons.collections4.ListUtils;
 import org.prebid.server.hooks.modules.ortb2.blocking.core.model.Result;
 
 import java.util.Arrays;
 import java.util.Collection;
 import java.util.List;
 import java.util.Objects;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 public interface MergeUtils {
@@ -26,19 +24,8 @@ public interface MergeUtils {
                 .filter(Objects::nonNull)
                 .flatMap(Collection::stream)
                 .distinct()
-                .collect(Collectors.toList());
+                .toList();
 
         return !warnings.isEmpty() ? warnings : null;
-    }
-
-    static <T> List<T> merge(List<T> defaultValues, List<T> overriddenValues) {
-        if (overriddenValues == null) {
-            return defaultValues;
-        }
-        if (defaultValues == null) {
-            return overriddenValues;
-        }
-
-        return ListUtils.union(defaultValues, overriddenValues);
     }
 }
