@@ -9,10 +9,12 @@ import com.iab.openrtb.request.App;
 import com.iab.openrtb.request.BidRequest;
 import com.iab.openrtb.request.Content;
 import com.iab.openrtb.request.Deal;
+import com.iab.openrtb.request.Eid;
 import com.iab.openrtb.request.Imp;
 import com.iab.openrtb.request.Pmp;
 import com.iab.openrtb.request.Site;
 import com.iab.openrtb.request.Source;
+import com.iab.openrtb.request.SupplyChain;
 import com.iab.openrtb.request.User;
 import com.iab.openrtb.response.Bid;
 import com.iab.openrtb.response.BidResponse;
@@ -22,8 +24,12 @@ import io.vertx.core.Future;
 import io.vertx.core.logging.Logger;
 import io.vertx.core.logging.LoggerFactory;
 import org.apache.commons.collections4.CollectionUtils;
+import org.apache.commons.collections4.ListUtils;
 import org.apache.commons.lang3.ObjectUtils;
 import org.apache.commons.lang3.StringUtils;
+import org.prebid.server.auction.adjustment.BidAdjustmentFactorResolver;
+import org.prebid.server.auction.mediatypeprocessor.MediaTypeProcessingResult;
+import org.prebid.server.auction.mediatypeprocessor.MediaTypeProcessor;
 import org.prebid.server.auction.model.AuctionContext;
 import org.prebid.server.auction.model.AuctionParticipation;
 import org.prebid.server.auction.model.BidRequestCacheInfo;
@@ -33,6 +39,8 @@ import org.prebid.server.auction.model.BidderResponse;
 import org.prebid.server.auction.model.MultiBidConfig;
 import org.prebid.server.auction.model.StoredResponseResult;
 import org.prebid.server.auction.model.Tuple2;
+import org.prebid.server.auction.versionconverter.BidRequestOrtbVersionConversionManager;
+import org.prebid.server.auction.versionconverter.OrtbVersion;
 import org.prebid.server.bidder.Bidder;
 import org.prebid.server.bidder.BidderCatalog;
 import org.prebid.server.bidder.HttpBidderRequester;
@@ -88,10 +96,7 @@ import org.prebid.server.proto.openrtb.ext.request.ExtRequestPrebidMultiBid;
 import org.prebid.server.proto.openrtb.ext.request.ExtRequestPrebidSchain;
 import org.prebid.server.proto.openrtb.ext.request.ExtRequestTargeting;
 import org.prebid.server.proto.openrtb.ext.request.ExtSite;
-import org.prebid.server.proto.openrtb.ext.request.ExtSource;
-import org.prebid.server.proto.openrtb.ext.request.ExtSourceSchain;
 import org.prebid.server.proto.openrtb.ext.request.ExtUser;
-import org.prebid.server.proto.openrtb.ext.request.ExtUserEid;
 import org.prebid.server.proto.openrtb.ext.request.ImpMediaType;
 import org.prebid.server.proto.openrtb.ext.request.TraceLevel;
 import org.prebid.server.proto.openrtb.ext.response.ExtBidResponse;
@@ -156,8 +161,10 @@ public class ExchangeService {
     private final DealsProcessor dealsProcessor;
     private final PrivacyEnforcementService privacyEnforcementService;
     private final FpdResolver fpdResolver;
-    private final SchainResolver schainResolver;
+    private final SupplyChainResolver supplyChainResolver;
     private final DebugResolver debugResolver;
+    private final MediaTypeProcessor mediaTypeProcessor;
+    private final BidRequestOrtbVersionConversionManager ortbVersionConversionManager;
     private final HttpBidderRequester httpBidderRequester;
     private final ResponseBidValidator responseBidValidator;
     private final CurrencyConversionService currencyService;
@@ -168,7 +175,7 @@ public class ExchangeService {
     private final HttpInteractionLogger httpInteractionLogger;
     private final PriceFloorAdjuster priceFloorAdjuster;
     private final PriceFloorEnforcer priceFloorEnforcer;
-    private final AdjustmentFactorResolver adjustmentFactorResolver;
+    private final BidAdjustmentFactorResolver bidAdjustmentFactorResolver;
     private final Metrics metrics;
     private final Clock clock;
     private final JacksonMapper mapper;
@@ -180,8 +187,10 @@ public class ExchangeService {
                            DealsProcessor dealsProcessor,
                            PrivacyEnforcementService privacyEnforcementService,
                            FpdResolver fpdResolver,
-                           SchainResolver schainResolver,
+                           SupplyChainResolver supplyChainResolver,
                            DebugResolver debugResolver,
+                           MediaTypeProcessor mediaTypeProcessor,
+                           BidRequestOrtbVersionConversionManager ortbVersionConversionManager,
                            HttpBidderRequester httpBidderRequester,
                            ResponseBidValidator responseBidValidator,
                            CurrencyConversionService currencyService,
@@ -192,7 +201,7 @@ public class ExchangeService {
                            HttpInteractionLogger httpInteractionLogger,
                            PriceFloorAdjuster priceFloorAdjuster,
                            PriceFloorEnforcer priceFloorEnforcer,
-                           AdjustmentFactorResolver adjustmentFactorResolver,
+                           BidAdjustmentFactorResolver bidAdjustmentFactorResolver,
                            Metrics metrics,
                            Clock clock,
                            JacksonMapper mapper,
@@ -207,8 +216,10 @@ public class ExchangeService {
         this.dealsProcessor = Objects.requireNonNull(dealsProcessor);
         this.privacyEnforcementService = Objects.requireNonNull(privacyEnforcementService);
         this.fpdResolver = Objects.requireNonNull(fpdResolver);
-        this.schainResolver = Objects.requireNonNull(schainResolver);
+        this.supplyChainResolver = Objects.requireNonNull(supplyChainResolver);
         this.debugResolver = Objects.requireNonNull(debugResolver);
+        this.mediaTypeProcessor = Objects.requireNonNull(mediaTypeProcessor);
+        this.ortbVersionConversionManager = Objects.requireNonNull(ortbVersionConversionManager);
         this.httpBidderRequester = Objects.requireNonNull(httpBidderRequester);
         this.responseBidValidator = Objects.requireNonNull(responseBidValidator);
         this.currencyService = Objects.requireNonNull(currencyService);
@@ -219,7 +230,7 @@ public class ExchangeService {
         this.httpInteractionLogger = Objects.requireNonNull(httpInteractionLogger);
         this.priceFloorAdjuster = Objects.requireNonNull(priceFloorAdjuster);
         this.priceFloorEnforcer = Objects.requireNonNull(priceFloorEnforcer);
-        this.adjustmentFactorResolver = Objects.requireNonNull(adjustmentFactorResolver);
+        this.bidAdjustmentFactorResolver = Objects.requireNonNull(bidAdjustmentFactorResolver);
         this.metrics = Objects.requireNonNull(metrics);
         this.clock = Objects.requireNonNull(clock);
         this.mapper = Objects.requireNonNull(mapper);
@@ -232,6 +243,7 @@ public class ExchangeService {
      */
     public Future<AuctionContext> holdAuction(AuctionContext context) {
         return processAuctionRequest(context)
+                .compose(this::invokeResponseHooks)
                 .map(this::enrichWithHooksDebugInfo)
                 .map(this::updateHooksMetrics);
     }
@@ -263,12 +275,11 @@ public class ExchangeService {
 
         return storedResponseProcessor.getStoredResponseResult(bidRequest.getImp(), timeout)
                 .map(storedResponseResult -> populateStoredResponse(storedResponseResult, storedAuctionResponses))
-                .compose(storedResponseResult -> extractAuctionParticipation(
+                .compose(storedResponseResult -> extractAuctionParticipations(
                         receivedContext, storedResponseResult, aliases, bidderToMultiBid))
 
                 .map(auctionParticipation -> updateRequestMetric(
                         auctionParticipation, uidsCookie, aliases, account, requestTypeMetric))
-                .map(bidderRequests -> maybeLogBidderInteraction(receivedContext, bidderRequests))
                 .compose(auctionParticipations -> CompositeFuture.join(
                         auctionParticipations.stream()
                                 .map(auctionParticipation -> invokeHooksAndRequestBids(
@@ -277,10 +288,11 @@ public class ExchangeService {
                                         auctionTimeout(timeout, cacheInfo.isDoCaching()),
                                         aliases)
                                         .map(auctionParticipation::with))
-                                .collect(Collectors.toList())))
+                                .collect(Collectors.toCollection(ArrayList::new))))
                 // send all the requests to the bidders and gathers results
                 .map(CompositeFuture::<AuctionParticipation>list)
 
+                .map(storedResponseProcessor::updateStoredBidResponse)
                 .map(auctionParticipations -> storedResponseProcessor.mergeWithBidderResponses(
                         auctionParticipations, storedAuctionResponses, bidRequest.getImp()))
                 .map(auctionParticipations -> dropZeroNonDealBids(auctionParticipations, debugWarnings))
@@ -300,9 +312,7 @@ public class ExchangeService {
                         .compose(bidResponse -> bidResponsePostProcessor.postProcess(
                                 receivedContext.getHttpRequest(), uidsCookie, bidRequest, bidResponse, account))
 
-                        .map(context::with))
-
-                .compose(this::invokeResponseHooks);
+                        .map(context::with));
     }
 
     private BidderAliases aliases(BidRequest bidRequest) {
@@ -380,8 +390,9 @@ public class ExchangeService {
             final String codePrefix = prebidMultiBid.getTargetBidderCodePrefix();
 
             if (bidder != null && CollectionUtils.isNotEmpty(bidders)) {
-                debugWarnings.add(String.format("Invalid MultiBid: bidder %s and bidders %s specified. "
-                        + "Only bidder %s will be used.", bidder, bidders, bidder));
+                debugWarnings.add(
+                        "Invalid MultiBid: bidder %s and bidders %s specified. Only bidder %s will be used."
+                                .formatted(bidder, bidders, bidder));
 
                 tryAddBidderWithMultiBid(bidder, maxBids, codePrefix, bidderToMultiBid, debugWarnings);
                 continue;
@@ -391,8 +402,9 @@ public class ExchangeService {
                 tryAddBidderWithMultiBid(bidder, maxBids, codePrefix, bidderToMultiBid, debugWarnings);
             } else if (CollectionUtils.isNotEmpty(bidders)) {
                 if (codePrefix != null) {
-                    debugWarnings.add(String.format("Invalid MultiBid: CodePrefix %s that was specified for bidders %s "
-                            + "will be skipped.", codePrefix, bidders));
+                    debugWarnings.add(
+                            "Invalid MultiBid: CodePrefix %s that was specified for bidders %s will be skipped."
+                                    .formatted(codePrefix, bidders));
                 }
 
                 bidders.forEach(currentBidder ->
@@ -411,13 +423,13 @@ public class ExchangeService {
                                                  Map<String, MultiBidConfig> bidderToMultiBid,
                                                  List<String> debugWarnings) {
         if (bidderToMultiBid.containsKey(bidder)) {
-            debugWarnings.add(String.format("Invalid MultiBid: Bidder %s specified multiple times.", bidder));
+            debugWarnings.add("Invalid MultiBid: Bidder %s specified multiple times.".formatted(bidder));
             return;
         }
 
         if (maxBids == null) {
-            debugWarnings.add(String.format("Invalid MultiBid: MaxBids for bidder %s is not specified and "
-                    + "will be skipped.", bidder));
+            debugWarnings.add("Invalid MultiBid: MaxBids for bidder %s is not specified and will be skipped."
+                    .formatted(bidder));
             return;
         }
 
@@ -470,7 +482,7 @@ public class ExchangeService {
      * NOTE: the return list will only contain entries for bidders that both have the extension field in at least one
      * {@link Imp}, and are known to {@link BidderCatalog} or aliases from bidRequest.ext.prebid.aliases.
      */
-    private Future<List<AuctionParticipation>> extractAuctionParticipation(
+    private Future<List<AuctionParticipation>> extractAuctionParticipations(
             AuctionContext context,
             StoredResponseResult storedResponseResult,
             BidderAliases aliases,
@@ -480,13 +492,13 @@ public class ExchangeService {
                 .filter(imp -> bidderParamsFromImpExt(imp.getExt()) != null)
                 .map(imp -> dealsProcessor.removePgDealsOnlyBiddersWithoutDeals(context, imp, aliases))
                 .filter(Objects::nonNull)
-                .collect(Collectors.toList());
+                .toList();
         // identify valid bidders and aliases out of imps
         final List<String> bidders = imps.stream()
                 .flatMap(imp -> StreamUtil.asStream(bidderParamsFromImpExt(imp.getExt()).fieldNames())
                         .filter(bidder -> isValidBidder(bidder, aliases)))
                 .distinct()
-                .collect(Collectors.toList());
+                .toList();
 
         final Map<String, Map<String, String>> impBidderToStoredBidResponse =
                 storedResponseResult.getImpBidderToStoredBidResponse();
@@ -648,27 +660,29 @@ public class ExchangeService {
                              Map<String, List<String>> eidPermissions) {
 
         final String updatedBuyerUid = updateUserBuyerUid(user, bidder, aliases, uidsBody, uidsCookie);
-        final List<ExtUserEid> userEids = extractUserEids(user);
-        final List<ExtUserEid> allowedUserEids = resolveAllowedEids(userEids, bidder, eidPermissions);
-        final boolean shouldUpdateUserEids = extUser != null
-                && allowedUserEids.size() != CollectionUtils.emptyIfNull(userEids).size();
+        final List<Eid> userEids = extractUserEids(user);
+        final List<Eid> allowedUserEids = resolveAllowedEids(userEids, bidder, eidPermissions);
+        final boolean shouldUpdateUserEids = allowedUserEids.size() != CollectionUtils.emptyIfNull(userEids).size();
         final boolean shouldCleanExtPrebid = extUser != null && extUser.getPrebid() != null;
         final boolean shouldCleanExtData = extUser != null && extUser.getData() != null && !useFirstPartyData;
-        final boolean shouldUpdateUserExt = shouldCleanExtData || shouldCleanExtPrebid || shouldUpdateUserEids;
+        final boolean shouldUpdateUserExt = shouldCleanExtData || shouldCleanExtPrebid;
         final boolean shouldCleanData = user != null && user.getData() != null && !useFirstPartyData;
 
         User maskedUser = user;
-        if (updatedBuyerUid != null || shouldUpdateUserExt || shouldCleanData) {
+        if (updatedBuyerUid != null || shouldUpdateUserEids || shouldUpdateUserExt || shouldCleanData) {
             final User.UserBuilder userBuilder = user == null ? User.builder() : user.toBuilder();
             if (updatedBuyerUid != null) {
                 userBuilder.buyeruid(updatedBuyerUid);
+            }
+
+            if (shouldUpdateUserEids) {
+                userBuilder.eids(nullIfEmpty(allowedUserEids));
             }
 
             if (shouldUpdateUserExt) {
                 final ExtUser updatedExtUser = extUser.toBuilder()
                         .prebid(shouldCleanExtPrebid ? null : extUser.getPrebid())
                         .data(shouldCleanExtData ? null : extUser.getData())
-                        .eids(shouldUpdateUserEids ? nullIfEmpty(allowedUserEids) : userEids)
                         .build();
                 userBuilder.ext(updatedExtUser.isEmpty() ? null : updatedExtUser);
             }
@@ -698,24 +712,19 @@ public class ExchangeService {
                 : null;
     }
 
-    /**
-     * Extracts {@link List<ExtUserEid>} from {@link User}.
-     * Returns null if user or its extension is null.
-     */
-    private List<ExtUserEid> extractUserEids(User user) {
-        final ExtUser extUser = user != null ? user.getExt() : null;
-        return extUser != null ? extUser.getEids() : null;
+    private List<Eid> extractUserEids(User user) {
+        return user != null ? user.getEids() : null;
     }
 
     /**
-     * Returns {@link List<ExtUserEid>} allowed by {@param eidPermissions} per source per bidder.
+     * Returns {@link List<Eid>} allowed by {@param eidPermissions} per source per bidder.
      */
-    private List<ExtUserEid> resolveAllowedEids(List<ExtUserEid> userEids, String bidder,
-                                                Map<String, List<String>> eidPermissions) {
+    private List<Eid> resolveAllowedEids(List<Eid> userEids, String bidder,
+                                         Map<String, List<String>> eidPermissions) {
         return CollectionUtils.emptyIfNull(userEids)
                 .stream()
-                .filter(extUserEid -> isUserEidAllowed(extUserEid.getSource(), eidPermissions, bidder))
-                .collect(Collectors.toList());
+                .filter(userEid -> isUserEidAllowed(userEid.getSource(), eidPermissions, bidder))
+                .toList();
     }
 
     /**
@@ -741,7 +750,10 @@ public class ExchangeService {
      * Extract cookie family name from bidder's {@link Usersyncer} if it is enabled. If not - return null.
      */
     private String resolveCookieFamilyName(String bidder) {
-        return bidderCatalog.isActive(bidder) ? bidderCatalog.usersyncerByName(bidder).getCookieFamilyName() : null;
+        return bidderCatalog.usersyncerByName(bidder)
+                .filter(usersyncer -> bidderCatalog.isActive(bidder))
+                .map(Usersyncer::getCookieFamilyName)
+                .orElse(null);
     }
 
     /**
@@ -774,7 +786,7 @@ public class ExchangeService {
                         context))
                 // Can't be removed after we prepare workflow to filter blocked
                 .filter(auctionParticipation -> !auctionParticipation.isRequestBlocked())
-                .collect(Collectors.toList());
+                .collect(Collectors.toCollection(ArrayList::new));
 
         Collections.shuffle(bidderRequests);
 
@@ -826,6 +838,8 @@ public class ExchangeService {
                     .build();
         }
 
+        final OrtbVersion ortbVersion = bidderSupportedOrtbVersion(bidder, bidderAliases);
+
         final List<String> firstPartyDataBidders = firstPartyDataBidders(bidRequest.getExt());
         final boolean useFirstPartyData = firstPartyDataBidders == null || firstPartyDataBidders.contains(bidder);
 
@@ -834,11 +848,6 @@ public class ExchangeService {
 
         final App app = bidRequest.getApp();
         final Site site = bidRequest.getSite();
-        if (app != null && site != null) {
-            context.getDebugWarnings().add("BidRequest contains app and site. Removed site object");
-        }
-        final Site resolvedSite = app == null ? site : null;
-
         final ObjectNode fpdSite = fpdConfig != null ? fpdConfig.getSite() : null;
         final ObjectNode fpdApp = fpdConfig != null ? fpdConfig.getApp() : null;
 
@@ -847,16 +856,28 @@ public class ExchangeService {
                 ? impBidderToStoredBidResponse.get(imps.get(0).getId()).get(bidder)
                 : null;
 
-        final BidderRequest bidderRequest = BidderRequest.of(bidder, storedBidResponse, bidRequest.toBuilder()
+        final App preparedApp = prepareApp(app, fpdApp, useFirstPartyData);
+        final Site preparedSite = prepareSite(site, fpdSite, useFirstPartyData);
+        if (preparedApp != null && preparedSite != null) {
+            context.getDebugWarnings().add("BidRequest contains app and site. Removed site object");
+        }
+
+        final BidRequest modifiedBidRequest = bidRequest.toBuilder()
                 // User was already prepared above
                 .user(bidderPrivacyResult.getUser())
                 .device(bidderPrivacyResult.getDevice())
                 .imp(prepareImps(bidder, imps, bidRequest, useFirstPartyData, bidderAliases, context.getAccount()))
-                .app(prepareApp(app, fpdApp, useFirstPartyData))
-                .site(prepareSite(resolvedSite, fpdSite, useFirstPartyData))
+                .app(preparedApp)
+                .site(preparedApp == null ? preparedSite : null)
                 .source(prepareSource(bidder, bidRequest))
                 .ext(prepareExt(bidder, bidderToPrebidBidders, bidderToMultiBid, bidRequest.getExt()))
-                .build());
+                .build();
+
+        final BidderRequest bidderRequest = BidderRequest.of(
+                bidder,
+                ortbVersion,
+                storedBidResponse,
+                modifiedBidRequest);
 
         return AuctionParticipation.builder()
                 .bidder(bidder)
@@ -864,6 +885,10 @@ public class ExchangeService {
                 .requestBlocked(false)
                 .analyticsBlocked(blockedAnalyticsByTcf)
                 .build();
+    }
+
+    private OrtbVersion bidderSupportedOrtbVersion(String bidder, BidderAliases aliases) {
+        return bidderCatalog.bidderInfoByName(aliases.resolveBidder(bidder)).getOrtbVersion();
     }
 
     /**
@@ -880,7 +905,7 @@ public class ExchangeService {
         return imps.stream()
                 .filter(imp -> bidderParamsFromImpExt(imp.getExt()).hasNonNull(bidder))
                 .map(imp -> prepareImp(imp, bidder, bidRequest, useFirstPartyData, aliases, account))
-                .collect(Collectors.toList());
+                .toList();
     }
 
     private Imp prepareImp(Imp imp,
@@ -918,7 +943,7 @@ public class ExchangeService {
                 .map(deal -> Tuple2.of(deal, toExtDeal(deal.getExt())))
                 .filter((Tuple2<Deal, ExtDeal> tuple) -> DealUtil.isBidderHasDeal(bidder, tuple.getRight(), aliases))
                 .map((Tuple2<Deal, ExtDeal> tuple) -> prepareDeal(tuple.getLeft(), tuple.getRight()))
-                .collect(Collectors.toList());
+                .toList();
 
         return pmp.toBuilder().deals(updatedDeals).build();
     }
@@ -933,8 +958,7 @@ public class ExchangeService {
         try {
             return mapper.mapper().treeToValue(ext, ExtDeal.class);
         } catch (JsonProcessingException e) {
-            throw new PreBidException(
-                    String.format("Error decoding bidRequest.imp.pmp.deal.ext: %s", e.getMessage()), e);
+            throw new PreBidException("Error decoding bidRequest.imp.pmp.deal.ext: " + e.getMessage(), e);
         }
     }
 
@@ -987,7 +1011,11 @@ public class ExchangeService {
             final ExtImpPrebid extImpPrebid = extImpPrebid(extImpPrebidNode);
             final ExtImpPrebidFloors floors = extImpPrebid.getFloors();
             final ExtImpPrebidFloors updatedFloors = floors != null
-                    ? ExtImpPrebidFloors.of(floors.getFloorRule(), floors.getFloorRuleValue(), adjustedFloor)
+                    ? ExtImpPrebidFloors.of(floors.getFloorRule(),
+                    floors.getFloorRuleValue(),
+                    adjustedFloor,
+                    floors.getFloorMin(),
+                    floors.getFloorMinCur())
                     : null;
 
             return mapper.mapper().valueToTree(
@@ -1007,7 +1035,7 @@ public class ExchangeService {
         try {
             return mapper.mapper().treeToValue(extImpPrebid, ExtImpPrebid.class);
         } catch (JsonProcessingException e) {
-            throw new PreBidException(String.format("Error decoding imp.ext.prebid: %s", e.getMessage()), e);
+            throw new PreBidException("Error decoding imp.ext.prebid: " + e.getMessage(), e);
         }
     }
 
@@ -1081,17 +1109,15 @@ public class ExchangeService {
     private Source prepareSource(String bidder, BidRequest bidRequest) {
         final Source receivedSource = bidRequest.getSource();
 
-        final ExtSourceSchain bidderSchain = schainResolver.resolveForBidder(bidder, bidRequest);
+        final SupplyChain bidderSchain = supplyChainResolver.resolveForBidder(bidder, bidRequest);
 
         if (bidderSchain == null) {
             return receivedSource;
         }
 
-        final ExtSource extSource = ExtSource.of(bidderSchain);
-
         return receivedSource == null
-                ? Source.builder().ext(extSource).build()
-                : receivedSource.toBuilder().ext(extSource).build();
+                ? Source.builder().schain(bidderSchain).build()
+                : receivedSource.toBuilder().schain(bidderSchain).build();
     }
 
     /**
@@ -1172,7 +1198,7 @@ public class ExchangeService {
                                                            MetricName requestTypeMetric) {
         auctionParticipations = auctionParticipations.stream()
                 .filter(auctionParticipation -> !auctionParticipation.isRequestBlocked())
-                .collect(Collectors.toList());
+                .collect(Collectors.toCollection(ArrayList::new));
 
         metrics.updateRequestBidderCardinalityMetric(auctionParticipations.size());
         metrics.updateAccountRequestMetrics(account, requestTypeMetric);
@@ -1185,8 +1211,10 @@ public class ExchangeService {
             final BidderRequest bidderRequest = auctionParticipation.getBidderRequest();
             final String bidder = aliases.resolveBidder(bidderRequest.getBidder());
             final boolean isApp = bidderRequest.getBidRequest().getApp() != null;
-            final boolean noBuyerId = !bidderCatalog.isActive(bidder) || StringUtils.isBlank(
-                    uidsCookie.uidFrom(bidderCatalog.usersyncerByName(bidder).getCookieFamilyName()));
+            final boolean noBuyerId = bidderCatalog.usersyncerByName(bidder)
+                    .map(Usersyncer::getCookieFamilyName)
+                    .map(cookieFamily -> StringUtils.isBlank(uidsCookie.uidFrom(cookieFamily)))
+                    .orElse(false);
 
             metrics.updateAdapterRequestTypeAndNoCookieMetrics(bidder, requestTypeMetric, !isApp && noBuyerId);
         }
@@ -1200,7 +1228,6 @@ public class ExchangeService {
                                                              BidderAliases aliases) {
 
         return hookStageExecutor.executeBidderRequestStage(bidderRequest, auctionContext)
-
                 .compose(stageResult -> requestBidsOrRejectBidder(
                         stageResult, bidderRequest, auctionContext, timeout, aliases))
 
@@ -1216,6 +1243,7 @@ public class ExchangeService {
             Timeout timeout,
             BidderAliases aliases) {
 
+        httpInteractionLogger.maybeLogBidderRequest(auctionContext, bidderRequest);
         if (hookStageResult.isShouldReject()) {
             return Future.succeededFuture(BidderResponse.of(bidderRequest.getBidder(), BidderSeatBid.empty(), 0));
         }
@@ -1243,7 +1271,31 @@ public class ExchangeService {
 
         final long startTime = clock.millis();
 
-        return httpBidderRequester.requestBids(bidder, bidderRequest, timeout, requestHeaders, debugEnabledForBidder)
+        final MediaTypeProcessingResult mediaTypeProcessingResult =
+                mediaTypeProcessor.process(bidderRequest.getBidRequest(), resolvedBidderName);
+
+        if (mediaTypeProcessingResult.isRejected()) {
+            final BidderSeatBid bidderSeatBid = BidderSeatBid.of(
+                    Collections.emptyList(),
+                    Collections.emptyList(),
+                    Collections.emptyList(),
+                    mediaTypeProcessingResult.getErrors());
+
+            return Future.succeededFuture(BidderResponse.of(bidderName, bidderSeatBid, 0));
+        }
+
+        final BidRequest convertedBidRequest = ortbVersionConversionManager.convertFromAuctionSupportedVersion(
+                mediaTypeProcessingResult.getBidRequest(), bidderRequest.getOrtbVersion());
+
+        final BidderRequest modifiedBidderRequest = bidderRequest.with(convertedBidRequest);
+
+        return httpBidderRequester
+                .requestBids(bidder, modifiedBidderRequest, timeout, requestHeaders, aliases, debugEnabledForBidder)
+                .map(seatBid -> BidderSeatBid.of(
+                        seatBid.getBids(),
+                        seatBid.getHttpCalls(),
+                        seatBid.getErrors(),
+                        ListUtils.union(mediaTypeProcessingResult.getErrors(), seatBid.getWarnings())))
                 .map(seatBid -> BidderResponse.of(bidderName, seatBid, responseTime(startTime)));
     }
 
@@ -1254,8 +1306,7 @@ public class ExchangeService {
                 ? Collections.emptyList()
                 : stageResult.getPayload().bids();
 
-        return bidderResponse
-                .with(bidderResponse.getSeatBid().with(bids));
+        return bidderResponse.with(bidderResponse.getSeatBid().with(bids));
     }
 
     private List<AuctionParticipation> dropZeroNonDealBids(List<AuctionParticipation> auctionParticipations,
@@ -1263,7 +1314,7 @@ public class ExchangeService {
 
         return auctionParticipations.stream()
                 .map(auctionParticipation -> dropZeroNonDealBids(auctionParticipation, debugWarnings))
-                .collect(Collectors.toList());
+                .toList();
     }
 
     private AuctionParticipation dropZeroNonDealBids(AuctionParticipation auctionParticipation,
@@ -1277,9 +1328,8 @@ public class ExchangeService {
             final Bid bid = bidderBid.getBid();
             if (isZeroNonDealBids(bid.getPrice(), bid.getDealid())) {
                 metrics.updateAdapterRequestErrorMetric(bidderResponse.getBidder(), MetricName.unknown_error);
-                debugWarnings.add(String.format(
-                        "Dropped bid '%s'. Does not contain a positive (or zero if there is a deal) 'price'",
-                        bid.getId()));
+                debugWarnings.add("Dropped bid '%s'. Does not contain a positive (or zero if there is a deal) 'price'"
+                        .formatted(bid.getId()));
             } else {
                 validBids.add(bidderBid);
             }
@@ -1299,6 +1349,7 @@ public class ExchangeService {
     private List<AuctionParticipation> validateAndAdjustBids(List<AuctionParticipation> auctionParticipations,
                                                              AuctionContext auctionContext,
                                                              BidderAliases aliases) {
+
         return auctionParticipations.stream()
                 .map(auctionParticipation -> validBidderResponse(auctionParticipation, auctionContext, aliases))
                 .map(auctionParticipation -> applyBidPriceChanges(auctionParticipation, auctionContext.getBidRequest()))
@@ -1306,7 +1357,7 @@ public class ExchangeService {
                         auctionContext.getBidRequest(),
                         auctionParticipation,
                         auctionContext.getAccount()))
-                .collect(Collectors.toList());
+                .toList();
     }
 
     /**
@@ -1327,12 +1378,12 @@ public class ExchangeService {
         final BidderResponse bidderResponse = auctionParticipation.getBidderResponse();
         final BidderSeatBid seatBid = bidderResponse.getSeatBid();
         final List<BidderError> errors = new ArrayList<>(seatBid.getErrors());
+        final List<BidderError> warnings = new ArrayList<>(seatBid.getWarnings());
 
         final List<String> requestCurrencies = bidRequest.getCur();
         if (requestCurrencies.size() > 1) {
-            errors.add(BidderError.badInput(
-                    String.format("Cur parameter contains more than one currency. %s will be used",
-                            requestCurrencies.get(0))));
+            errors.add(BidderError.badInput("Cur parameter contains more than one currency. %s will be used"
+                    .formatted(requestCurrencies.get(0))));
         }
 
         final List<BidderBid> bids = seatBid.getBids();
@@ -1364,7 +1415,7 @@ public class ExchangeService {
 
         final BidderResponse resultBidderResponse = errors.isEmpty()
                 ? bidderResponse
-                : bidderResponse.with(BidderSeatBid.of(validBids, seatBid.getHttpCalls(), errors));
+                : bidderResponse.with(BidderSeatBid.of(validBids, seatBid.getHttpCalls(), errors, warnings));
         return auctionParticipation.with(resultBidderResponse);
     }
 
@@ -1427,8 +1478,8 @@ public class ExchangeService {
             }
         }
 
-        final BidderResponse resultBidderResponse =
-                bidderResponse.with(BidderSeatBid.of(updatedBidderBids, seatBid.getHttpCalls(), errors));
+        final BidderResponse resultBidderResponse = bidderResponse.with(BidderSeatBid.of(
+                updatedBidderBids, seatBid.getHttpCalls(), errors, seatBid.getWarnings()));
         return auctionParticipation.with(resultBidderResponse);
     }
 
@@ -1472,7 +1523,7 @@ public class ExchangeService {
         final ImpMediaType mediaType = ImpMediaTypeResolver.resolve(
                 bidderBid.getBid().getImpid(), bidRequest.getImp(), bidderBid.getType());
 
-        return adjustmentFactorResolver.resolve(mediaType, adjustmentFactors, bidder);
+        return bidAdjustmentFactorResolver.resolve(mediaType, adjustmentFactors, bidder);
     }
 
     private static ExtRequestBidAdjustmentFactors extBidAdjustmentFactors(BidRequest bidRequest) {
@@ -1514,14 +1565,6 @@ public class ExchangeService {
         return shouldCacheBids ? timeout.minus(expectedCacheTime) : timeout;
     }
 
-    private List<AuctionParticipation> maybeLogBidderInteraction(AuctionContext context,
-                                                                 List<AuctionParticipation> auctionParticipations) {
-        auctionParticipations.forEach(auctionParticipation ->
-                httpInteractionLogger.maybeLogBidderRequest(context, auctionParticipation.getBidderRequest()));
-
-        return auctionParticipations;
-    }
-
     /**
      * Updates 'request_time', 'responseTime', 'timeout_request', 'error_requests', 'no_bid_requests',
      * 'prices' metrics for each {@link AuctionParticipation}.
@@ -1532,10 +1575,11 @@ public class ExchangeService {
     private List<AuctionParticipation> updateMetricsFromResponses(List<AuctionParticipation> auctionParticipations,
                                                                   Account account,
                                                                   BidderAliases aliases) {
+
         final List<BidderResponse> bidderResponses = auctionParticipations.stream()
                 .filter(auctionParticipation -> !auctionParticipation.isRequestBlocked())
                 .map(AuctionParticipation::getBidderResponse)
-                .collect(Collectors.toList());
+                .toList();
 
         for (BidderResponse bidderResponse : bidderResponses) {
             final String bidder = aliases.resolveBidder(bidderResponse.getBidder());
@@ -1581,28 +1625,14 @@ public class ExchangeService {
      * Resolves {@link MetricName} by {@link BidderError.Type} value.
      */
     private static MetricName bidderErrorTypeToMetric(BidderError.Type errorType) {
-        final MetricName errorMetric;
-        switch (errorType) {
-            case bad_input:
-                errorMetric = MetricName.badinput;
-                break;
-            case bad_server_response:
-                errorMetric = MetricName.badserverresponse;
-                break;
-            case failed_to_request_bids:
-                errorMetric = MetricName.failedtorequestbids;
-                break;
-            case timeout:
-                errorMetric = MetricName.timeout;
-                break;
-            case invalid_bid:
-                errorMetric = MetricName.bid_validation;
-                break;
-            case generic:
-            default:
-                errorMetric = MetricName.unknown_error;
-        }
-        return errorMetric;
+        return switch (errorType) {
+            case bad_input -> MetricName.badinput;
+            case bad_server_response -> MetricName.badserverresponse;
+            case failed_to_request_bids -> MetricName.failedtorequestbids;
+            case timeout -> MetricName.timeout;
+            case invalid_bid -> MetricName.bid_validation;
+            case rejected_ipf, generic -> MetricName.unknown_error;
+        };
     }
 
     private AuctionContext enrichWithHooksDebugInfo(AuctionContext context) {
@@ -1613,19 +1643,22 @@ public class ExchangeService {
         }
 
         final BidResponse bidResponse = context.getBidResponse();
-        final ExtBidResponse ext = bidResponse.getExt();
-        final ExtBidResponsePrebid extPrebid = ext != null ? ext.getPrebid() : null;
+        final Optional<ExtBidResponse> ext = Optional.ofNullable(bidResponse.getExt());
+        final Optional<ExtBidResponsePrebid> extPrebid = ext.map(ExtBidResponse::getPrebid);
 
         final ExtBidResponsePrebid updatedExtPrebid = ExtBidResponsePrebid.of(
-                extPrebid != null ? extPrebid.getAuctiontimestamp() : null,
-                extModules);
-        final ExtBidResponse updatedExt = (ext != null ? ext.toBuilder() : ExtBidResponse.builder())
+                extPrebid.map(ExtBidResponsePrebid::getAuctiontimestamp).orElse(null),
+                extModules,
+                extPrebid.map(ExtBidResponsePrebid::getPassthrough).orElse(null),
+                extPrebid.map(ExtBidResponsePrebid::getTargeting).orElse(null));
+
+        final ExtBidResponse updatedExt = ext
+                .map(ExtBidResponse::toBuilder)
+                .orElse(ExtBidResponse.builder())
                 .prebid(updatedExtPrebid)
                 .build();
 
-        final BidResponse updatedBidResponse = bidResponse.toBuilder()
-                .ext(updatedExt)
-                .build();
+        final BidResponse updatedBidResponse = bidResponse.toBuilder().ext(updatedExt).build();
         return context.with(updatedBidResponse);
     }
 
@@ -1668,7 +1701,7 @@ public class ExchangeService {
                                         messagesLists -> messagesLists.getValue().stream()
                                                 .map(messagesGetter)
                                                 .flatMap(Collection::stream)
-                                                .collect(Collectors.toList())))));
+                                                .toList()))));
 
         return !messagesByModule.isEmpty() ? messagesByModule : null;
     }
@@ -1684,7 +1717,7 @@ public class ExchangeService {
                 .entrySet().stream()
                 .map(stageOutcome -> toTraceStage(stageOutcome.getKey(), stageOutcome.getValue(), traceLevel))
                 .filter(Objects::nonNull)
-                .collect(Collectors.toList());
+                .toList();
 
         if (stages.isEmpty()) {
             return null;
@@ -1702,7 +1735,7 @@ public class ExchangeService {
         final List<ExtModulesTraceStageOutcome> extStageOutcomes = stageOutcomes.stream()
                 .map(stageOutcome -> toTraceStageOutcome(stageOutcome, level))
                 .filter(Objects::nonNull)
-                .collect(Collectors.toList());
+                .toList();
 
         if (extStageOutcomes.isEmpty()) {
             return null;
@@ -1721,7 +1754,7 @@ public class ExchangeService {
 
         final List<ExtModulesTraceGroup> groups = stageOutcome.getGroups().stream()
                 .map(group -> toTraceGroup(group, level))
-                .collect(Collectors.toList());
+                .toList();
 
         if (groups.isEmpty()) {
             return null;
@@ -1735,7 +1768,7 @@ public class ExchangeService {
     private static ExtModulesTraceGroup toTraceGroup(GroupExecutionOutcome group, TraceLevel level) {
         final List<ExtModulesTraceInvocationResult> invocationResults = group.getHooks().stream()
                 .map(hook -> toTraceInvocationResult(hook, level))
-                .collect(Collectors.toList());
+                .toList();
 
         final long executionTime = invocationResults.stream()
                 .mapToLong(ExtModulesTraceInvocationResult::getExecutionTime)
@@ -1766,7 +1799,7 @@ public class ExchangeService {
         return ExtModulesTraceAnalyticsTags.of(CollectionUtils.emptyIfNull(analyticsTags.activities()).stream()
                 .filter(Objects::nonNull)
                 .map(ExchangeService::toTraceAnalyticsActivity)
-                .collect(Collectors.toList()));
+                .toList());
     }
 
     private static ExtModulesTraceAnalyticsActivity toTraceAnalyticsActivity(Activity activity) {
@@ -1776,7 +1809,7 @@ public class ExchangeService {
                 CollectionUtils.emptyIfNull(activity.results()).stream()
                         .filter(Objects::nonNull)
                         .map(ExchangeService::toTraceAnalyticsResult)
-                        .collect(Collectors.toList()));
+                        .toList());
     }
 
     private static ExtModulesTraceAnalyticsResult toTraceAnalyticsResult(Result result) {
