@@ -21,8 +21,8 @@ import org.prebid.server.bidder.invibes.model.InvibesInternalParams;
 import org.prebid.server.bidder.invibes.model.InvibesPlacementProperty;
 import org.prebid.server.bidder.invibes.model.InvibesTypedBid;
 import org.prebid.server.bidder.model.BidderBid;
+import org.prebid.server.bidder.model.BidderCall;
 import org.prebid.server.bidder.model.BidderError;
-import org.prebid.server.bidder.model.HttpCall;
 import org.prebid.server.bidder.model.HttpRequest;
 import org.prebid.server.bidder.model.Result;
 import org.prebid.server.exception.PreBidException;
@@ -30,6 +30,8 @@ import org.prebid.server.json.DecodeException;
 import org.prebid.server.json.JacksonMapper;
 import org.prebid.server.proto.openrtb.ext.ExtPrebid;
 import org.prebid.server.proto.openrtb.ext.request.ExtRegs;
+import org.prebid.server.proto.openrtb.ext.request.ExtRequest;
+import org.prebid.server.proto.openrtb.ext.request.ExtRequestPrebid;
 import org.prebid.server.proto.openrtb.ext.request.ExtUser;
 import org.prebid.server.proto.openrtb.ext.request.invibes.ExtImpInvibes;
 import org.prebid.server.proto.openrtb.ext.request.invibes.model.InvibesDebug;
@@ -41,7 +43,7 @@ import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Objects;
-import java.util.stream.Collectors;
+import java.util.Optional;
 
 public class InvibesBidder implements Bidder<InvibesBidRequest> {
 
@@ -90,7 +92,7 @@ public class InvibesBidder implements Bidder<InvibesBidRequest> {
             updateInvibesInternalParams(invibesInternalParams, extImpInvibes, imp);
         }
 
-        //TODO: add AMP parameter to invibesInternalParams, after reqInfo will be implemented
+        invibesInternalParams.setIsAmp(isAmp(request));
 
         final List<String> placementIds = invibesInternalParams.getBidParams().getPlacementIds();
         if (CollectionUtils.isEmpty(placementIds)) {
@@ -112,14 +114,13 @@ public class InvibesBidder implements Bidder<InvibesBidRequest> {
         try {
             return mapper.mapper().convertValue(imp.getExt(), INVIBES_EXT_TYPE_REFERENCE).getBidder();
         } catch (IllegalArgumentException e) {
-            throw new PreBidException(
-                    String.format("Error parsing invibesExt parameters in impression with id: %s", imp.getId()));
+            throw new PreBidException("Error parsing invibesExt parameters in impression with id: " + imp.getId());
         }
     }
 
     private void validateImp(Imp imp) {
         if (imp.getBanner() == null) {
-            throw new PreBidException(String.format("Banner not specified in impression with id: %s", imp.getId()));
+            throw new PreBidException("Banner not specified in impression with id: " + imp.getId());
         }
     }
 
@@ -249,9 +250,9 @@ public class InvibesBidder implements Bidder<InvibesBidRequest> {
         if (domainId == 0 || domainId == 1 || domainId == 1001) {
             return "bid";
         } else if (domainId < 1002) {
-            return String.format("bid%s", domainId);
+            return "bid" + domainId;
         } else {
-            return String.format("bid%s", domainId - 1000);
+            return "bid" + (domainId - 1000);
         }
     }
 
@@ -268,14 +269,21 @@ public class InvibesBidder implements Bidder<InvibesBidRequest> {
         return headers;
     }
 
+    private static boolean isAmp(BidRequest request) {
+        return Optional.ofNullable(request.getExt())
+                .map(ExtRequest::getPrebid)
+                .map(ExtRequestPrebid::getAmp)
+                .isPresent();
+    }
+
     @Override
-    public final Result<List<BidderBid>> makeBids(HttpCall<InvibesBidRequest> httpCall, BidRequest bidRequest) {
+    public final Result<List<BidderBid>> makeBids(BidderCall<InvibesBidRequest> httpCall, BidRequest bidRequest) {
         try {
             final InvibesBidderResponse bidResponse =
                     mapper.decodeValue(httpCall.getResponse().getBody(), InvibesBidderResponse.class);
             if (bidResponse != null && StringUtils.isNotBlank(bidResponse.getError())) {
                 return Result.withError(
-                        BidderError.badServerResponse(String.format("Server error: %s.", bidResponse.getError())));
+                        BidderError.badServerResponse("Server error: %s.".formatted(bidResponse.getError())));
             }
             return Result.of(extractBids(bidResponse), Collections.emptyList());
         } catch (DecodeException | PreBidException e) {
@@ -296,6 +304,6 @@ public class InvibesBidder implements Bidder<InvibesBidRequest> {
                 .filter(Objects::nonNull)
                 //TODO add DealPriority
                 .map(bid -> BidderBid.of(bid, BidType.banner, bidResponse.getCurrency()))
-                .collect(Collectors.toList());
+                .toList();
     }
 }
