@@ -1,5 +1,6 @@
 package org.prebid.server.bidder.rubicon;
 
+import com.fasterxml.jackson.core.JsonProcessingException;
 import com.fasterxml.jackson.core.type.TypeReference;
 import com.fasterxml.jackson.databind.JsonNode;
 import com.fasterxml.jackson.databind.node.ArrayNode;
@@ -12,13 +13,16 @@ import com.iab.openrtb.request.BidRequest;
 import com.iab.openrtb.request.Content;
 import com.iab.openrtb.request.Data;
 import com.iab.openrtb.request.Device;
+import com.iab.openrtb.request.Eid;
 import com.iab.openrtb.request.Format;
 import com.iab.openrtb.request.Imp;
 import com.iab.openrtb.request.Metric;
+import com.iab.openrtb.request.Native;
 import com.iab.openrtb.request.Publisher;
 import com.iab.openrtb.request.Segment;
 import com.iab.openrtb.request.Site;
 import com.iab.openrtb.request.Source;
+import com.iab.openrtb.request.Uid;
 import com.iab.openrtb.request.User;
 import com.iab.openrtb.request.Video;
 import com.iab.openrtb.response.Bid;
@@ -35,8 +39,8 @@ import org.apache.http.client.utils.URIBuilder;
 import org.prebid.server.bidder.Bidder;
 import org.prebid.server.bidder.ViewabilityVendors;
 import org.prebid.server.bidder.model.BidderBid;
+import org.prebid.server.bidder.model.BidderCall;
 import org.prebid.server.bidder.model.BidderError;
-import org.prebid.server.bidder.model.HttpCall;
 import org.prebid.server.bidder.model.HttpRequest;
 import org.prebid.server.bidder.model.PriceFloorInfo;
 import org.prebid.server.bidder.model.Result;
@@ -52,6 +56,7 @@ import org.prebid.server.bidder.rubicon.proto.request.RubiconImpExt;
 import org.prebid.server.bidder.rubicon.proto.request.RubiconImpExtPrebid;
 import org.prebid.server.bidder.rubicon.proto.request.RubiconImpExtRp;
 import org.prebid.server.bidder.rubicon.proto.request.RubiconImpExtRpTrack;
+import org.prebid.server.bidder.rubicon.proto.request.RubiconNative;
 import org.prebid.server.bidder.rubicon.proto.request.RubiconPubExt;
 import org.prebid.server.bidder.rubicon.proto.request.RubiconPubExtRp;
 import org.prebid.server.bidder.rubicon.proto.request.RubiconSiteExt;
@@ -63,6 +68,7 @@ import org.prebid.server.bidder.rubicon.proto.request.RubiconUserExt;
 import org.prebid.server.bidder.rubicon.proto.request.RubiconUserExtRp;
 import org.prebid.server.bidder.rubicon.proto.request.RubiconVideoExt;
 import org.prebid.server.bidder.rubicon.proto.request.RubiconVideoExtRp;
+import org.prebid.server.bidder.rubicon.proto.response.RubiconBid;
 import org.prebid.server.bidder.rubicon.proto.response.RubiconBidResponse;
 import org.prebid.server.bidder.rubicon.proto.response.RubiconSeatBid;
 import org.prebid.server.currency.CurrencyConversionService;
@@ -88,13 +94,9 @@ import org.prebid.server.proto.openrtb.ext.request.ExtRequestPrebid;
 import org.prebid.server.proto.openrtb.ext.request.ExtRequestPrebidMultiBid;
 import org.prebid.server.proto.openrtb.ext.request.ExtSite;
 import org.prebid.server.proto.openrtb.ext.request.ExtUser;
-import org.prebid.server.proto.openrtb.ext.request.ExtUserEid;
-import org.prebid.server.proto.openrtb.ext.request.ExtUserEidUid;
-import org.prebid.server.proto.openrtb.ext.request.ExtUserEidUidExt;
 import org.prebid.server.proto.openrtb.ext.request.ImpMediaType;
 import org.prebid.server.proto.openrtb.ext.request.rubicon.ExtImpRubicon;
 import org.prebid.server.proto.openrtb.ext.request.rubicon.ExtImpRubiconDebug;
-import org.prebid.server.proto.openrtb.ext.request.rubicon.ExtUserTpIdRubicon;
 import org.prebid.server.proto.openrtb.ext.request.rubicon.RubiconVideoParams;
 import org.prebid.server.proto.openrtb.ext.response.BidType;
 import org.prebid.server.proto.openrtb.ext.response.ExtBidPrebid;
@@ -116,6 +118,7 @@ import java.util.LinkedHashSet;
 import java.util.List;
 import java.util.Map;
 import java.util.Objects;
+import java.util.Optional;
 import java.util.Set;
 import java.util.UUID;
 import java.util.function.Function;
@@ -149,6 +152,8 @@ public class RubiconBidder implements Bidder<BidRequest> {
     private static final String FPD_ADSERVER_NAME_GAM = "gam";
     private static final String FPD_KEYWORDS_FIELD = "keywords";
     private static final String DFP_ADUNIT_CODE_FIELD = "dfp_ad_unit_code";
+    private static final String STYPE_FIELD = "stype";
+    private static final String RTI_PARTNER_FIELD = "rtiPartner";
     private static final String PREBID_EXT = "prebid";
 
     private static final String PPUID_STYPE = "ppuid";
@@ -168,8 +173,6 @@ public class RubiconBidder implements Bidder<BidRequest> {
     private static final TypeReference<ExtPrebid<ExtBidPrebid, ObjectNode>> EXT_PREBID_TYPE_REFERENCE =
             new TypeReference<>() {
             };
-    private static final int PORTRAIT_MOBILE_SIZE_ID = 67;
-    private static final int LANDSCAPE_MOBILE_SIZE_ID = 101;
 
     private final String endpointUrl;
     private final Set<String> supportedVendors;
@@ -234,7 +237,7 @@ public class RubiconBidder implements Bidder<BidRequest> {
     }
 
     @Override
-    public Result<List<BidderBid>> makeBids(HttpCall<BidRequest> httpCall, BidRequest bidRequest) {
+    public Result<List<BidderBid>> makeBids(BidderCall<BidRequest> httpCall, BidRequest bidRequest) {
         try {
             final List<BidderError> errors = new ArrayList<>();
             final RubiconBidResponse bidResponse =
@@ -276,13 +279,14 @@ public class RubiconBidder implements Bidder<BidRequest> {
     }
 
     private static boolean isValidType(Imp imp) {
-        return imp.getVideo() != null || imp.getBanner() != null;
+        return ObjectUtils.anyNotNull(imp.getVideo(), imp.getBanner(), imp.getXNative());
     }
 
     private BidderError impTypeErrorMessage(Imp imp) {
         final BidType type = resolveExpectedBidType(imp);
-        return BidderError.badInput(String.format("Impression with id %s rejected with invalid type `%s`."
-                + " Allowed types are banner and video.", imp.getId(), type != null ? type.name() : "unknown"));
+        return BidderError.badInput(
+                "Impression with id %s rejected with invalid type `%s`. Allowed types are [banner, video, native]"
+                        .formatted(imp.getId(), type != null ? type.name() : "unknown"));
     }
 
     private static BidType resolveExpectedBidType(Imp imp) {
@@ -338,6 +342,7 @@ public class RubiconBidder implements Bidder<BidRequest> {
         return rubiconImpExts.stream()
                 .filter(Objects::nonNull)
                 .map(ExtPrebid::getBidder)
+                .filter(Objects::nonNull)
                 .map(ExtImpRubicon::getVideo)
                 .filter(Objects::nonNull)
                 .map(RubiconVideoParams::getLanguage)
@@ -373,7 +378,7 @@ public class RubiconBidder implements Bidder<BidRequest> {
                         .setParameter(TK_XINT_QUERY_PARAMETER, tkXint)
                         .build().toString();
             } catch (URISyntaxException e) {
-                throw new PreBidException(String.format("Cant add the tk_xint value for url: %s", tkXint), e);
+                throw new PreBidException("Cant add the tk_xint value for url: " + tkXint, e);
             }
         }
         return endpointUrl;
@@ -411,11 +416,10 @@ public class RubiconBidder implements Bidder<BidRequest> {
         final App app = bidRequest.getApp();
         final Site site = bidRequest.getSite();
         final ExtRequest extRequest = bidRequest.getExt();
-        final boolean isVideo = isVideo(imp);
+        final ImpMediaType impType = impType(imp);
         final List<String> priceFloorsWarnings = new ArrayList<>();
 
-        final PriceFloorResult priceFloorResult = resolvePriceFloors(bidRequest, imp,
-                isVideo ? ImpMediaType.video : ImpMediaType.banner, priceFloorsWarnings);
+        final PriceFloorResult priceFloorResult = resolvePriceFloors(bidRequest, imp, impType, priceFloorsWarnings);
 
         final BigDecimal ipfFloor = ObjectUtil.getIfNotNull(priceFloorResult, PriceFloorResult::getFloorValue);
         final String ipfCurrency = ipfFloor != null
@@ -449,14 +453,20 @@ public class RubiconBidder implements Bidder<BidRequest> {
                     .bidfloor(resolvedBidFloor);
         }
 
-        if (isVideo) {
+        if (impType == ImpMediaType.video) {
             builder
                     .banner(null)
+                    .xNative(null)
                     .video(makeVideo(imp, extImpRubicon.getVideo(), extImpPrebid, referer(site)));
+        } else if (impType == ImpMediaType.banner) {
+            builder
+                    .banner(makeBanner(imp))
+                    .xNative(null)
+                    .video(null);
         } else {
             builder
-                    .banner(makeBanner(imp, overriddenSizes(extImpRubicon)))
-                    .video(null);
+                    .video(null)
+                    .xNative(makeNative(imp));
         }
 
         processWarnings(errors, priceFloorsWarnings);
@@ -538,8 +548,8 @@ public class RubiconBidder implements Bidder<BidRequest> {
         final String bidFloorCurrency = imp.getBidfloorcur();
         if (StringUtils.isBlank(bidFloorCurrency)) {
             if (isDebugEnabled(bidRequest)) {
-                errors.add(BidderError.badInput(String.format("Imp `%s` floor provided with no currency, assuming %s",
-                        imp.getId(), XAPI_CURRENCY)));
+                errors.add(BidderError.badInput("Imp `%s` floor provided with no currency, assuming %s"
+                        .formatted(imp.getId(), XAPI_CURRENCY)));
             }
             return XAPI_CURRENCY;
         }
@@ -553,8 +563,8 @@ public class RubiconBidder implements Bidder<BidRequest> {
 
         if (StringUtils.isBlank(floorCurrency)) {
             if (isDebugEnabled(bidRequest)) {
-                errors.add(BidderError.badInput(String.format("Ipf for imp `%s` provided floor with no currency, "
-                        + "assuming %s", imp.getId(), XAPI_CURRENCY)));
+                errors.add(BidderError.badInput("Ipf for imp `%s` provided floor with no currency, assuming %s"
+                        .formatted(imp.getId(), XAPI_CURRENCY)));
             }
             return XAPI_CURRENCY;
         }
@@ -580,9 +590,9 @@ public class RubiconBidder implements Bidder<BidRequest> {
         try {
             return currencyConversionService.convertCurrency(bidFloor, bidRequest, bidFloorCurrency, XAPI_CURRENCY);
         } catch (PreBidException e) {
-            throw new PreBidException(String.format(
-                    "Unable to convert provided bid floor currency from %s to %s for imp `%s` with a reason: %s",
-                    bidFloorCurrency, XAPI_CURRENCY, imp.getId(), e.getMessage()));
+            throw new PreBidException(
+                    "Unable to convert provided bid floor currency from %s to %s for imp `%s` with a reason: %s"
+                            .formatted(bidFloorCurrency, XAPI_CURRENCY, imp.getId(), e.getMessage()));
         }
     }
 
@@ -638,10 +648,24 @@ public class RubiconBidder implements Bidder<BidRequest> {
                                                      String currency,
                                                      Imp imp,
                                                      BidRequest bidRequest) {
+        final ObjectNode impExt = imp.getExt();
+        final ExtImpPrebid extImpPrebid = extImpPrebid(impExt.get(PREBID_EXT));
+        final ExtImpPrebidFloors floors = extImpPrebid != null ? extImpPrebid.getFloors() : null;
+
         return RubiconImpExtPrebid.of(ExtImpPrebidFloors.of(
                 priceFloorResult.getFloorRule(),
                 convertToXAPICurrency(priceFloorResult.getFloorRuleValue(), currency, imp, bidRequest),
-                convertToXAPICurrency(priceFloorResult.getFloorValue(), currency, imp, bidRequest)));
+                convertToXAPICurrency(priceFloorResult.getFloorValue(), currency, imp, bidRequest),
+                floors != null ? floors.getFloorMin() : null,
+                floors != null ? floors.getFloorMinCur() : null));
+    }
+
+    private ExtImpPrebid extImpPrebid(JsonNode extImpPrebid) {
+        try {
+            return mapper.mapper().treeToValue(extImpPrebid, ExtImpPrebid.class);
+        } catch (JsonProcessingException e) {
+            throw new PreBidException("Error decoding imp.ext.prebid: " + e.getMessage(), e);
+        }
     }
 
     private void mergeFirstPartyDataFromSite(Site site, ObjectNode result) {
@@ -804,6 +828,8 @@ public class RubiconBidder implements Bidder<BidRequest> {
                 mergeIntoArray(targetNode, currentFieldName, Boolean.toString(currentField.booleanValue()));
             } else if (isBooleanArray(currentField)) {
                 mergeIntoArray(targetNode, currentFieldName, booleanArrayToStringList(currentField));
+            } else if (isIntegerArray(currentField)) {
+                mergeIntoArray(targetNode, currentFieldName, integerArrayToStringList(currentField));
             }
         }
     }
@@ -814,6 +840,10 @@ public class RubiconBidder implements Bidder<BidRequest> {
 
     private static boolean isBooleanArray(JsonNode node) {
         return node.isArray() && StreamSupport.stream(node.spliterator(), false).allMatch(JsonNode::isBoolean);
+    }
+
+    private static boolean isIntegerArray(JsonNode node) {
+        return node.isArray() && StreamSupport.stream(node.spliterator(), false).allMatch(JsonNode::isIntegralNumber);
     }
 
     private ArrayNode stringsToStringArray(String... values) {
@@ -836,7 +866,14 @@ public class RubiconBidder implements Bidder<BidRequest> {
         return StreamSupport.stream(booleanArray.spliterator(), false)
                 .map(JsonNode::booleanValue)
                 .map(value -> Boolean.toString(value))
-                .collect(Collectors.toList());
+                .toList();
+    }
+
+    private static List<String> integerArrayToStringList(JsonNode booleanArray) {
+        return StreamSupport.stream(booleanArray.spliterator(), false)
+                .map(JsonNode::intValue)
+                .map(value -> Integer.toString(value))
+                .toList();
     }
 
     private List<String> mapVendorsNamesToUrls(List<Metric> metrics) {
@@ -846,7 +883,7 @@ public class RubiconBidder implements Bidder<BidRequest> {
         final List<String> vendorsUrls = metrics.stream()
                 .filter(this::isMetricSupported)
                 .map(metric -> ViewabilityVendors.valueOf(metric.getVendor()).getUrl())
-                .collect(Collectors.toList());
+                .toList();
         return vendorsUrls.isEmpty() ? null : vendorsUrls;
     }
 
@@ -900,13 +937,18 @@ public class RubiconBidder implements Bidder<BidRequest> {
         }
     }
 
-    private static boolean isVideo(Imp imp) {
+    private static ImpMediaType impType(Imp imp) {
         final Video video = imp.getVideo();
-        if (video != null) {
-            // Do any other media types exist? Or check required video fields.
-            return imp.getBanner() == null || isFullyPopulatedVideo(video);
+        final Banner banner = imp.getBanner();
+        final Native xNative = imp.getXNative();
+        if (video != null && ((banner == null && xNative == null) || isFullyPopulatedVideo(video))) {
+            return ImpMediaType.video;
         }
-        return false;
+        if (banner == null && xNative != null) {
+            return ImpMediaType.xNative;
+        }
+
+        return ImpMediaType.banner;
     }
 
     private static boolean isFullyPopulatedVideo(Video video) {
@@ -926,7 +968,7 @@ public class RubiconBidder implements Bidder<BidRequest> {
         final Integer skipDelay = rubiconVideoParams != null ? rubiconVideoParams.getSkipdelay() : null;
         final Integer sizeId = rubiconVideoParams != null ? rubiconVideoParams.getSizeId() : null;
 
-        final Integer resolvedSizeId = sizeId == null || sizeId == 0
+        final Integer resolvedSizeId = BidderUtil.isNullOrZero(sizeId)
                 ? resolveVideoSizeId(video.getPlacement(), imp.getInstl())
                 : sizeId;
         validateVideoSizeId(resolvedSizeId, referer, imp.getId());
@@ -948,8 +990,10 @@ public class RubiconBidder implements Bidder<BidRequest> {
     private static void validateVideoSizeId(Integer resolvedSizeId, String referer, String impId) {
         // log only 1% of cases to monitor how often video impressions does not have size id
         if (resolvedSizeId == null) {
-            MISSING_VIDEO_SIZE_LOGGER.warn(String.format("RP adapter: video request with no size_id. Referrer URL = %s,"
-                    + " impId = %s", referer, impId), 0.01d);
+            MISSING_VIDEO_SIZE_LOGGER.warn(
+                    "RP adapter: video request with no size_id. Referrer URL = %s, impId = %s"
+                            .formatted(referer, impId),
+                    0.01d);
         }
     }
 
@@ -970,98 +1014,107 @@ public class RubiconBidder implements Bidder<BidRequest> {
         return null;
     }
 
-    private static List<Format> overriddenSizes(ExtImpRubicon rubiconImpExt) {
-        final List<Format> overriddenSizes;
-
-        final List<Integer> sizeIds = rubiconImpExt.getSizes();
-        if (sizeIds != null) {
-            final List<Format> resolvedSizes = RubiconSize.idToSize(sizeIds);
-            if (resolvedSizes.isEmpty()) {
-                throw new PreBidException("Bad request.imp[].ext.rubicon.sizes");
-            }
-            overriddenSizes = resolvedSizes;
-        } else {
-            overriddenSizes = null;
-        }
-
-        return overriddenSizes;
-    }
-
-    private Banner makeBanner(Imp imp, List<Format> overriddenSizes) {
+    private Banner makeBanner(Imp imp) {
         final Banner banner = imp.getBanner();
-        final boolean isInterstitial = Objects.equals(imp.getInstl(), 1);
-        final List<Format> sizes = ObjectUtils.defaultIfNull(overriddenSizes, banner.getFormat());
-        if (CollectionUtils.isEmpty(sizes)) {
-            throw new PreBidException("rubicon imps must have at least one imp.format element");
+        final Integer width = banner.getW();
+        final Integer height = banner.getH();
+        final List<Format> format = banner.getFormat();
+        if ((width == null || height == null) && CollectionUtils.isEmpty(format)) {
+            throw new PreBidException("rubicon imps must have at least one size element [w, h, format]");
         }
 
         return banner.toBuilder()
-                .format(sizes)
-                .ext(mapper.mapper().valueToTree(makeBannerExt(sizes, isInterstitial)))
+                .ext(mapper.mapper().valueToTree(
+                        RubiconBannerExt.of(RubiconBannerExtRp.of("text/html"))))
                 .build();
     }
 
-    private static RubiconBannerExt makeBannerExt(List<Format> sizes, boolean isInterstitial) {
-        final List<Integer> rubiconSizeIds = mapToRubiconSizeIds(sizes, isInterstitial);
-        final Integer primarySizeId = rubiconSizeIds.get(0);
-        final List<Integer> altSizeIds = rubiconSizeIds.size() > 1
-                ? rubiconSizeIds.subList(1, rubiconSizeIds.size())
-                : null;
-
-        return RubiconBannerExt.of(RubiconBannerExtRp.of(primarySizeId, altSizeIds, "text/html"));
-    }
-
-    private static List<Integer> mapToRubiconSizeIds(List<Format> sizes, boolean isInterstitial) {
-        final List<Integer> validRubiconSizeIds = sizes.stream()
-                .map(RubiconSize::toId)
-                .filter(id -> id > 0)
-                .sorted(RubiconSize.comparator())
-                .collect(Collectors.toList());
-
-        if (validRubiconSizeIds.isEmpty()) {
-            // FIXME: Added 11.11.2020. short term solution for full screen interstitial adunits (PR #1003)
-            if (isInterstitial) {
-                validRubiconSizeIds.add(resolveNotStandardSizeForInstl(sizes.get(0)));
-            } else {
-                throw new PreBidException("No valid sizes");
-            }
+    private Native makeNative(Imp imp) {
+        final Native xNative = imp.getXNative();
+        final String version = ObjectUtil.getIfNotNull(xNative, Native::getVer);
+        if (StringUtils.equalsAny(version, "1.0", "1.1")) {
+            return xNative;
         }
-        return validRubiconSizeIds;
+        final String nativeRequest = xNative.getRequest();
+        final JsonNode requestNode = nodeFromString(nativeRequest);
+
+        try {
+            validateNativeRequest(requestNode);
+        } catch (PreBidException e) {
+            throw new PreBidException(
+                    String.format("Error in native object for imp with id %s: %s", imp.getId(), e.getMessage()));
+        }
+
+        return RubiconNative.builder()
+                .requestNative((ObjectNode) requestNode)
+                .request(xNative.getRequest())
+                .ver(xNative.getVer())
+                .api(xNative.getApi())
+                .battr(xNative.getBattr())
+                .ext(xNative.getExt())
+                .build();
     }
 
-    private static int resolveNotStandardSizeForInstl(Format size) {
-        return size.getH() > size.getW() ? PORTRAIT_MOBILE_SIZE_ID : LANDSCAPE_MOBILE_SIZE_ID;
+    public final JsonNode nodeFromString(String stringValue) {
+        try {
+            return StringUtils.isNotBlank(stringValue) ? mapper.mapper().readTree(stringValue) : null;
+        } catch (Exception e) {
+            return null;
+        }
+    }
+
+    private void validateNativeRequest(JsonNode requestNode) {
+        if (requestNode == null) {
+            throw new PreBidException("Request can not be parsed");
+        }
+
+        final JsonNode eventtrackers = requestNode.get("eventtrackers");
+        if (eventtrackers == null || !eventtrackers.isArray()) {
+            throw new PreBidException("Eventtrackers are not present or not of array type");
+        }
+
+        final JsonNode context = requestNode.get("context");
+        if (context == null || !context.isInt()) {
+            throw new PreBidException("Context is not present or not of int type");
+        }
+
+        final JsonNode placement = requestNode.get("plcmttype");
+        if (placement == null || !placement.isInt()) {
+            throw new PreBidException("Plcmttype is not present or not of int type");
+        }
     }
 
     private User makeUser(User user, ExtImpRubicon rubiconImpExt) {
         final String userId = user != null ? user.getId() : null;
         final ExtUser extUser = user != null ? user.getExt() : null;
         final String resolvedId = userId == null ? resolveUserId(extUser) : null;
-        final List<ExtUserEid> extUserEids = extUser != null ? extUser.getEids() : null;
+        final List<Eid> extUserEids = extUser != null ? extUser.getEids() : null;
         final String userBuyeruid = user != null ? user.getBuyeruid() : null;
         final String resolvedBuyeruid = userBuyeruid != null ? userBuyeruid : resolveBuyeruidFromEids(extUserEids);
-        final Map<String, List<ExtUserEid>> sourceToUserEidExt = extUser != null
+        final Map<String, List<Eid>> sourceToUserEidExt = extUser != null
                 ? specialExtUserEids(extUserEids)
                 : null;
-        final List<ExtUserTpIdRubicon> userExtTpIds = sourceToUserEidExt != null
-                ? extractExtUserTpIds(sourceToUserEidExt)
-                : null;
         final boolean hasStypeToRemove = hasStypeToRemove(extUserEids);
-        final List<ExtUserEid> resolvedExtUserEids = hasStypeToRemove
+        final List<Eid> resolvedExtUserEids = hasStypeToRemove
                 ? prepareExtUserEids(extUserEids)
                 : extUserEids;
+        final boolean hasDataToRemove = ObjectUtil.getIfNotNull(user, User::getData) != null;
         final RubiconUserExtRp userExtRp = rubiconUserExtRp(user, rubiconImpExt, sourceToUserEidExt);
         final ObjectNode userExtData = extUser != null ? extUser.getData() : null;
         final String liverampId = extractLiverampId(sourceToUserEidExt);
 
         if (userExtRp == null
-                && userExtTpIds == null
                 && userExtData == null
+                && resolvedExtUserEids == null
                 && liverampId == null
                 && resolvedId == null
                 && Objects.equals(userBuyeruid, resolvedBuyeruid)
-                && !hasStypeToRemove) {
-            return user;
+                && !hasStypeToRemove
+        ) {
+
+            return hasDataToRemove
+                    ? user.toBuilder().data(null).build()
+                    : user;
         }
 
         final ExtUser userExt = extUser != null
@@ -1074,7 +1127,6 @@ public class RubiconBidder implements Bidder<BidRequest> {
 
         final RubiconUserExt rubiconUserExt = RubiconUserExt.builder()
                 .rp(userExtRp)
-                .tpid(userExtTpIds)
                 .liverampIdl(liverampId)
                 .build();
 
@@ -1086,12 +1138,13 @@ public class RubiconBidder implements Bidder<BidRequest> {
                 .gender(null)
                 .yob(null)
                 .geo(null)
+                .data(null)
                 .ext(mapper.fillExtension(userExt, rubiconUserExt))
                 .build();
     }
 
-    private String resolveUserId(ExtUser extUser) {
-        final List<ExtUserEid> extUserEids = extUser != null ? extUser.getEids() : null;
+    private static String resolveUserId(ExtUser extUser) {
+        final List<Eid> extUserEids = extUser != null ? extUser.getEids() : null;
         return CollectionUtils.emptyIfNull(extUserEids)
                 .stream()
                 .map(extUserEid -> getIdFromFirstUuidWithStypePpuid(extUserEid.getUids()))
@@ -1100,78 +1153,85 @@ public class RubiconBidder implements Bidder<BidRequest> {
                 .orElse(null);
     }
 
-    private String getIdFromFirstUuidWithStypePpuid(List<ExtUserEidUid> extUserEidUids) {
+    private static String getIdFromFirstUuidWithStypePpuid(List<Uid> extUserEidUids) {
         return CollectionUtils.emptyIfNull(extUserEidUids).stream()
                 .filter(Objects::nonNull)
                 .filter(extUserEidUid -> Objects.equals(PPUID_STYPE, getUserEidUidStype(extUserEidUid)))
-                .map(ExtUserEidUid::getId)
+                .map(Uid::getId)
                 .findFirst()
                 .orElse(null);
     }
 
-    private String getUserEidUidStype(ExtUserEidUid extUserEidUid) {
-        final ExtUserEidUidExt extUserEidUidExt = extUserEidUid.getExt();
-        return extUserEidUidExt != null ? extUserEidUidExt.getStype() : null;
+    private static String getUserEidUidStype(Uid uid) {
+        final ObjectNode uidExt = uid != null ? uid.getExt() : null;
+        final JsonNode stype = uidExt != null ? uidExt.path(STYPE_FIELD) : null;
+        return stype != null && !stype.isMissingNode()
+                ? stype.asText()
+                : null;
     }
 
-    private boolean hasStypeToRemove(List<ExtUserEid> extUserEids) {
+    private static boolean hasStypeToRemove(List<Eid> extUserEids) {
         return CollectionUtils.emptyIfNull(extUserEids).stream()
                 .filter(Objects::nonNull)
-                .map(ExtUserEid::getUids)
+                .map(Eid::getUids)
                 .filter(Objects::nonNull)
                 .flatMap(Collection::stream)
-                .map(ExtUserEidUid::getExt)
+                .map(RubiconBidder::getUserEidUidStype)
                 .filter(Objects::nonNull)
-                .map(ExtUserEidUidExt::getStype)
                 .anyMatch(STYPE_TO_REMOVE::contains);
     }
 
-    private List<ExtUserEid> prepareExtUserEids(List<ExtUserEid> extUserEids) {
+    private static List<Eid> prepareExtUserEids(List<Eid> extUserEids) {
         return CollectionUtils.emptyIfNull(extUserEids).stream()
                 .filter(Objects::nonNull)
                 .map(RubiconBidder::prepareExtUserEid)
-                .collect(Collectors.toList());
+                .toList();
     }
 
-    private static ExtUserEid prepareExtUserEid(ExtUserEid extUserEid) {
-        final List<ExtUserEidUid> extUserEidUids = CollectionUtils.emptyIfNull(extUserEid.getUids()).stream()
+    private static Eid prepareExtUserEid(Eid extUserEid) {
+        final List<Uid> extUserEidUids = CollectionUtils.emptyIfNull(extUserEid.getUids()).stream()
                 .filter(Objects::nonNull)
                 .map(RubiconBidder::cleanExtUserEidUidStype)
-                .collect(Collectors.toList());
-        return ExtUserEid.of(extUserEid.getSource(), extUserEid.getId(), extUserEidUids, extUserEid.getExt());
+                .toList();
+        return Eid.of(extUserEid.getSource(), extUserEidUids, extUserEid.getExt());
     }
 
-    private static ExtUserEidUid cleanExtUserEidUidStype(ExtUserEidUid extUserEidUid) {
-        final ExtUserEidUidExt extUserEidUidExt = extUserEidUid.getExt();
-        return extUserEidUidExt == null || !STYPE_TO_REMOVE.contains(extUserEidUidExt.getStype())
-                ? extUserEidUid
-                : ExtUserEidUid.of(extUserEidUid.getId(), extUserEidUid.getAtype(),
-                ExtUserEidUidExt.of(extUserEidUidExt.getRtiPartner(), null));
+    private static Uid cleanExtUserEidUidStype(Uid extUserEidUid) {
+        final ObjectNode extUserEidUidExt = extUserEidUid.getExt();
+        if (extUserEidUidExt == null || !STYPE_TO_REMOVE.contains(getUserEidUidStype(extUserEidUid))) {
+            return extUserEidUid;
+        }
+
+        final ObjectNode extUserEidUidExtCopy = extUserEidUidExt.deepCopy();
+        extUserEidUidExtCopy.remove(STYPE_FIELD);
+
+        return Uid.of(
+                extUserEidUid.getId(),
+                extUserEidUid.getAtype(),
+                extUserEidUidExtCopy);
     }
 
-    private static String resolveBuyeruidFromEids(List<ExtUserEid> eids) {
+    private static String resolveBuyeruidFromEids(List<Eid> eids) {
         return CollectionUtils.emptyIfNull(eids).stream()
                 .filter(Objects::nonNull)
                 .filter(eid -> SOURCE_RUBICON.equals(eid.getSource()))
-                .map(ExtUserEid::getUids)
+                .map(Eid::getUids)
                 .filter(Objects::nonNull)
                 .flatMap(Collection::stream)
                 .filter(Objects::nonNull)
                 .filter(RubiconBidder::validateExtUserEidUidForUserBuyeruid)
-                .map(ExtUserEidUid::getId)
+                .map(Uid::getId)
                 .findFirst()
                 .orElse(null);
 
     }
 
-    private static boolean validateExtUserEidUidForUserBuyeruid(ExtUserEidUid uid) {
-        final ExtUserEidUidExt uidExt = ObjectUtil.getIfNotNull(uid, ExtUserEidUid::getExt);
-        final String uidExtStype = ObjectUtil.getIfNotNull(uidExt, ExtUserEidUidExt::getStype);
-
+    private static boolean validateExtUserEidUidForUserBuyeruid(Uid uid) {
+        final String uidExtStype = getUserEidUidStype(uid);
         return StringUtils.equalsAny(uidExtStype, PPUID_STYPE, OTHER_STYPE);
     }
 
-    private static Map<String, List<ExtUserEid>> specialExtUserEids(List<ExtUserEid> eids) {
+    private static Map<String, List<Eid>> specialExtUserEids(List<Eid> eids) {
         if (CollectionUtils.isEmpty(eids)) {
             return null;
         }
@@ -1179,57 +1239,19 @@ public class RubiconBidder implements Bidder<BidRequest> {
                 .filter(extUserEid -> StringUtils.equalsAny(extUserEid.getSource(),
                         ADSERVER_EID, LIVEINTENT_EID, LIVERAMP_EID))
                 .filter(extUserEid -> CollectionUtils.isNotEmpty(extUserEid.getUids()))
-                .collect(Collectors.groupingBy(ExtUserEid::getSource));
-    }
-
-    /**
-     * Analyzes request.user.ext.eids and returns a list of new {@link ExtUserTpIdRubicon}s for supported vendors.
-     */
-    private static List<ExtUserTpIdRubicon> extractExtUserTpIds(Map<String, List<ExtUserEid>> specialExtUserEids) {
-        final List<ExtUserTpIdRubicon> result = new ArrayList<>();
-
-        specialExtUserEids.getOrDefault(ADSERVER_EID, Collections.emptyList()).stream()
-                .map(extUserEid -> extUserTpIdForAdServer(extUserEid.getUids().get(0)))
-                .filter(Objects::nonNull)
-                .forEach(result::add);
-
-        specialExtUserEids.getOrDefault(LIVEINTENT_EID, Collections.emptyList()).stream()
-                .map(extUserEid -> extUserTpIdForLiveintent(extUserEid.getUids().get(0)))
-                .filter(Objects::nonNull)
-                .findFirst()
-                .ifPresent(result::add);
-
-        return result.isEmpty() ? null : result;
-    }
-
-    /**
-     * Extracts {@link ExtUserTpIdRubicon} for AdServer.
-     */
-    private static ExtUserTpIdRubicon extUserTpIdForAdServer(ExtUserEidUid adServerEidUid) {
-        final ExtUserEidUidExt ext = adServerEidUid != null ? adServerEidUid.getExt() : null;
-        return ext != null && Objects.equals(ext.getRtiPartner(), "TDID")
-                ? ExtUserTpIdRubicon.of("tdid", adServerEidUid.getId())
-                : null;
-    }
-
-    /**
-     * Extracts {@link ExtUserTpIdRubicon} for Liveintent.
-     */
-    private static ExtUserTpIdRubicon extUserTpIdForLiveintent(ExtUserEidUid adServerEidUid) {
-        final String id = adServerEidUid != null ? adServerEidUid.getId() : null;
-        return id != null ? ExtUserTpIdRubicon.of(LIVEINTENT_EID, id) : null;
+                .collect(Collectors.groupingBy(Eid::getSource));
     }
 
     private RubiconUserExtRp rubiconUserExtRp(User user,
                                               ExtImpRubicon rubiconImpExt,
-                                              Map<String, List<ExtUserEid>> sourceToUserEidExt) {
+                                              Map<String, List<Eid>> sourceToUserEidExt) {
 
         final JsonNode target = rubiconUserExtRpTarget(sourceToUserEidExt, rubiconImpExt.getVisitor(), user);
 
         return target != null ? RubiconUserExtRp.of(target) : null;
     }
 
-    private JsonNode rubiconUserExtRpTarget(Map<String, List<ExtUserEid>> sourceToUserEidExt,
+    private JsonNode rubiconUserExtRpTarget(Map<String, List<Eid>> sourceToUserEidExt,
                                             ObjectNode visitor,
                                             User user) {
 
@@ -1259,7 +1281,7 @@ public class RubiconBidder implements Bidder<BidRequest> {
         return target != null && target.isObject() ? (ObjectNode) target : mapper.mapper().createObjectNode();
     }
 
-    private static void copyLiveintentSegment(Map<String, List<ExtUserEid>> sourceToUserEidExt, ObjectNode result) {
+    private static void copyLiveintentSegment(Map<String, List<Eid>> sourceToUserEidExt, ObjectNode result) {
         if (sourceToUserEidExt != null && CollectionUtils.isNotEmpty(sourceToUserEidExt.get(LIVEINTENT_EID))) {
             final ObjectNode ext = sourceToUserEidExt.get(LIVEINTENT_EID).get(0).getExt();
             final JsonNode segment = ext != null ? ext.get("segments") : null;
@@ -1286,7 +1308,7 @@ public class RubiconBidder implements Bidder<BidRequest> {
                 .flatMap(segments -> segments.stream()
                         .map(Segment::getId))
                 .filter(Objects::nonNull)
-                .collect(Collectors.toList());
+                .toList();
 
         if (CollectionUtils.isNotEmpty(iabValue)) {
             final ArrayNode iab = target.putArray("iab");
@@ -1300,11 +1322,11 @@ public class RubiconBidder implements Bidder<BidRequest> {
         return taxonomyName != null && taxonomyName.isInt() && segtaxValues.contains(taxonomyName.intValue());
     }
 
-    private static String extractLiverampId(Map<String, List<ExtUserEid>> sourceToUserEidExt) {
-        final List<ExtUserEid> liverampEids = MapUtils.emptyIfNull(sourceToUserEidExt).get(LIVERAMP_EID);
-        for (ExtUserEid extUserEid : CollectionUtils.emptyIfNull(liverampEids)) {
+    private static String extractLiverampId(Map<String, List<Eid>> sourceToUserEidExt) {
+        final List<Eid> liverampEids = MapUtils.emptyIfNull(sourceToUserEidExt).get(LIVERAMP_EID);
+        for (Eid extUserEid : CollectionUtils.emptyIfNull(liverampEids)) {
             return extUserEid.getUids().stream()
-                    .map(ExtUserEidUid::getId)
+                    .map(Uid::getId)
                     .filter(StringUtils::isNotEmpty)
                     .findFirst()
                     .orElse(null);
@@ -1343,16 +1365,27 @@ public class RubiconBidder implements Bidder<BidRequest> {
     }
 
     private static Content makeSiteContent(Content siteContent, String impLanguage) {
-        if (StringUtils.isBlank(impLanguage)) {
-            return siteContent;
-        }
-        if (siteContent == null) {
-            return Content.builder().language(impLanguage).build();
-        } else {
-            return StringUtils.isBlank(siteContent.getLanguage())
-                    ? siteContent.toBuilder().language(impLanguage).build()
-                    : siteContent;
-        }
+        final boolean hasDataToRemove = ObjectUtil.getIfNotNull(siteContent, Content::getData) != null;
+
+        final String contentLanguage = ObjectUtil.getIfNotNull(siteContent, Content::getLanguage);
+        final String resolvedLanguage = StringUtils.isBlank(contentLanguage) && StringUtils.isNotBlank(impLanguage)
+                ? impLanguage
+                : null;
+
+        return resolvedLanguage != null || hasDataToRemove
+                ? Optional.ofNullable(siteContent)
+                .map(Content::toBuilder)
+                .orElseGet(Content::builder)
+                .data(null)
+                .language(resolvedLanguage != null ? resolvedLanguage : contentLanguage)
+                .build()
+                : siteContent;
+    }
+
+    private static String resolveLanguage(String contentLanguage, String impLanguage) {
+        return StringUtils.isNotBlank(impLanguage) && StringUtils.isBlank(contentLanguage)
+                ? impLanguage
+                : contentLanguage;
     }
 
     private Publisher makePublisher(ExtImpRubicon rubiconImpExt) {
@@ -1438,7 +1471,7 @@ public class RubiconBidder implements Bidder<BidRequest> {
                 .filter(Objects::nonNull)
                 .map(lineItem -> createLineItemBidRequest(lineItem, bidRequest, singleImp))
                 .map((BidRequest request) -> createHttpRequest(request, uri))
-                .collect(Collectors.toList());
+                .toList();
     }
 
     private BidRequest createLineItemBidRequest(ExtDealLine lineItem, BidRequest bidRequest, Imp imp) {
@@ -1501,7 +1534,7 @@ public class RubiconBidder implements Bidder<BidRequest> {
                 .flatMap(Collection::stream)
                 .map(bid -> updateBid(bid, idToImp.get(bid.getImpid()), cpmOverrideFromRequest, bidResponse))
                 .map(bid -> createBidderBid(bid, idToRubiconImp.get(bid.getImpid()), bidType, bidResponse.getCur()))
-                .collect(Collectors.toList());
+                .toList();
     }
 
     private RubiconSeatBid updateSeatBids(RubiconSeatBid seatBid, List<BidderError> errors) {
@@ -1510,14 +1543,14 @@ public class RubiconBidder implements Bidder<BidRequest> {
         if (networkId <= 0) {
             return seatBid;
         }
-        final List<Bid> updatedBids = seatBid.getBid().stream()
+        final List<RubiconBid> updatedBids = seatBid.getBid().stream()
                 .map(bid -> insertNetworkIdToMeta(bid, networkId, errors))
                 .filter(Objects::nonNull)
-                .collect(Collectors.toList());
+                .toList();
         return seatBid.toBuilder().bid(updatedBids).build();
     }
 
-    private Bid insertNetworkIdToMeta(Bid bid, int networkId, List<BidderError> errors) {
+    private RubiconBid insertNetworkIdToMeta(RubiconBid bid, int networkId, List<BidderError> errors) {
         final ObjectNode bidExt = bid.getExt();
         final ExtPrebid<ExtBidPrebid, ObjectNode> extPrebid;
         try {
@@ -1546,11 +1579,11 @@ public class RubiconBidder implements Bidder<BidRequest> {
         try {
             return bidExt != null ? mapper.mapper().convertValue(bidExt, EXT_PREBID_TYPE_REFERENCE) : null;
         } catch (IllegalArgumentException e) {
-            throw new PreBidException(String.format("Invalid ext passed in bid with id: %s", bidId));
+            throw new PreBidException("Invalid ext passed in bid with id: " + bidId);
         }
     }
 
-    private Bid updateBid(Bid bid, Imp imp, Float cpmOverrideFromRequest, RubiconBidResponse bidResponse) {
+    private Bid updateBid(RubiconBid bid, Imp imp, Float cpmOverrideFromRequest, RubiconBidResponse bidResponse) {
         String bidId = bid.getId();
         if (generateBidId) {
             // Since Rubicon XAPI returns openrtb_response.seatbid.bid.id not unique enough
@@ -1568,10 +1601,29 @@ public class RubiconBidder implements Bidder<BidRequest> {
                 ? new BigDecimal(String.valueOf(cpmOverride))
                 : bid.getPrice();
 
-        return bid.toBuilder()
+        final RubiconBid updatedRubiconBid = bid.toBuilder()
                 .id(bidId)
+                .adm(resolveAdm(bid.getAdm(), bid.getAdmobject()))
                 .price(bidPrice)
                 .build();
+
+        return bidFromRubiconBid(updatedRubiconBid);
+    }
+
+    private String resolveAdm(String bidAdm, ObjectNode admobject) {
+        if (StringUtils.isNotBlank(bidAdm)) {
+            return bidAdm;
+        }
+
+        return admobject != null ? admobject.toString() : null;
+    }
+
+    private Bid bidFromRubiconBid(RubiconBid rubiconBid) {
+        try {
+            return mapper.mapper().convertValue(rubiconBid, Bid.class);
+        } catch (IllegalArgumentException e) {
+            throw new PreBidException("Error converting rubiconBid to  ortbBid: " + e.getMessage(), e);
+        }
     }
 
     private static BidderBid createBidderBid(Bid bid, Imp imp, BidType bidType, String currency) {
@@ -1598,7 +1650,13 @@ public class RubiconBidder implements Bidder<BidRequest> {
     }
 
     private static BidType bidType(BidRequest bidRequest) {
-        return isVideo(bidRequest.getImp().get(0)) ? BidType.video : BidType.banner;
+        final ImpMediaType impMediaType = impType(bidRequest.getImp().get(0));
+        return switch (impMediaType) {
+            case video -> BidType.video;
+            case banner -> BidType.banner;
+            case xNative -> BidType.xNative;
+            default -> throw new PreBidException("Unsupported bid mediaType");
+        };
     }
 
     private ObjectNode toObjectNode(JsonNode node) {
