@@ -5,6 +5,7 @@ import com.iab.openrtb.request.BidRequest;
 import com.iab.openrtb.response.BidResponse;
 import io.vertx.core.Future;
 import io.vertx.core.Vertx;
+import org.apache.commons.lang3.ObjectUtils;
 import org.apache.commons.lang3.StringUtils;
 import org.prebid.server.auction.model.AuctionContext;
 import org.prebid.server.auction.model.BidderRequest;
@@ -25,6 +26,7 @@ import org.prebid.server.hooks.execution.v1.InvocationContextImpl;
 import org.prebid.server.hooks.execution.v1.auction.AuctionInvocationContextImpl;
 import org.prebid.server.hooks.execution.v1.auction.AuctionRequestPayloadImpl;
 import org.prebid.server.hooks.execution.v1.auction.AuctionResponsePayloadImpl;
+import org.prebid.server.hooks.execution.v1.bidder.AllProcessedBidResponsesPayloadImpl;
 import org.prebid.server.hooks.execution.v1.bidder.BidderInvocationContextImpl;
 import org.prebid.server.hooks.execution.v1.bidder.BidderRequestPayloadImpl;
 import org.prebid.server.hooks.execution.v1.bidder.BidderResponsePayloadImpl;
@@ -34,6 +36,7 @@ import org.prebid.server.hooks.v1.InvocationContext;
 import org.prebid.server.hooks.v1.auction.AuctionInvocationContext;
 import org.prebid.server.hooks.v1.auction.AuctionRequestPayload;
 import org.prebid.server.hooks.v1.auction.AuctionResponsePayload;
+import org.prebid.server.hooks.v1.bidder.AllProcessedBidResponsesPayload;
 import org.prebid.server.hooks.v1.bidder.BidderInvocationContext;
 import org.prebid.server.hooks.v1.bidder.BidderRequestPayload;
 import org.prebid.server.hooks.v1.bidder.BidderResponsePayload;
@@ -51,7 +54,6 @@ import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 import java.util.Objects;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 public class HookStageExecutor {
@@ -59,6 +61,8 @@ public class HookStageExecutor {
     private static final String ENTITY_HTTP_REQUEST = "http-request";
     private static final String ENTITY_AUCTION_REQUEST = "auction-request";
     private static final String ENTITY_AUCTION_RESPONSE = "auction-response";
+    private static final String ENTITY_ALL_PROCESSED_BID_RESPONSES = "all-processed-bid-responses";
+    private static final Account EMPTY_ACCOUNT = Account.empty(StringUtils.EMPTY);
 
     private final ExecutionPlan hostExecutionPlan;
     private final ExecutionPlan defaultAccountExecutionPlan;
@@ -110,8 +114,7 @@ public class HookStageExecutor {
 
         final Endpoint endpoint = context.getEndpoint();
 
-        return this
-                .stageExecutor(StageWithHookType.ENTRYPOINT, ENTITY_HTTP_REQUEST, context)
+        return stageExecutor(StageWithHookType.ENTRYPOINT, ENTITY_HTTP_REQUEST, context)
                 .withExecutionPlan(planForEntrypointStage(endpoint))
                 .withInitialPayload(EntrypointPayloadImpl.of(queryParams, headers, body))
                 .withInvocationContextProvider(invocationContextProvider(endpoint))
@@ -205,16 +208,15 @@ public class HookStageExecutor {
 
         final Endpoint endpoint = context.getEndpoint();
 
-        return this
-                .stageExecutor(StageWithHookType.PROCESSED_BIDDER_RESPONSE, bidder, context, account, endpoint)
+        return stageExecutor(StageWithHookType.PROCESSED_BIDDER_RESPONSE, bidder, context, account, endpoint)
                 .withInitialPayload(BidderResponsePayloadImpl.of(bids))
                 .withInvocationContextProvider(bidderInvocationContextProvider(endpoint, auctionContext, bidder))
                 .withRejectAllowed(true)
                 .execute();
     }
 
-    public Future<HookStageExecutionResult<AuctionResponsePayload>> executeAuctionResponseStage(
-            BidResponse bidResponse,
+    public Future<HookStageExecutionResult<AllProcessedBidResponsesPayload>> executeAllProcessedBidResponsesStage(
+            List<BidderResponse> bidderResponses,
             AuctionContext auctionContext) {
 
         final Account account = auctionContext.getAccount();
@@ -222,8 +224,25 @@ public class HookStageExecutor {
 
         final Endpoint endpoint = context.getEndpoint();
 
-        return this
-                .stageExecutor(StageWithHookType.AUCTION_RESPONSE, ENTITY_AUCTION_RESPONSE, context, account, endpoint)
+        return stageExecutor(
+                StageWithHookType.ALL_PROCESSED_BID_RESPONSES, ENTITY_ALL_PROCESSED_BID_RESPONSES,
+                context, account, endpoint)
+                .withInitialPayload(AllProcessedBidResponsesPayloadImpl.of(bidderResponses))
+                .withInvocationContextProvider(auctionInvocationContextProvider(endpoint, auctionContext))
+                .withRejectAllowed(false)
+                .execute();
+    }
+
+    public Future<HookStageExecutionResult<AuctionResponsePayload>> executeAuctionResponseStage(
+            BidResponse bidResponse,
+            AuctionContext auctionContext) {
+
+        final Account account = ObjectUtils.defaultIfNull(auctionContext.getAccount(), EMPTY_ACCOUNT);
+        final HookExecutionContext context = auctionContext.getHookExecutionContext();
+
+        final Endpoint endpoint = context.getEndpoint();
+
+        return stageExecutor(StageWithHookType.AUCTION_RESPONSE, ENTITY_AUCTION_RESPONSE, context, account, endpoint)
                 .withInitialPayload(AuctionResponsePayloadImpl.of(bidResponse))
                 .withInvocationContextProvider(auctionInvocationContextProvider(endpoint, auctionContext))
                 .withRejectAllowed(false)
@@ -248,8 +267,7 @@ public class HookStageExecutor {
             Account account,
             Endpoint endpoint) {
 
-        return this
-                .stageExecutor(stage, entity, context)
+        return stageExecutor(stage, entity, context)
                 .withExecutionPlan(planForStage(account, endpoint, stage.stage()));
     }
 
@@ -281,8 +299,9 @@ public class HookStageExecutor {
                 StageWithHookType.forStage(stage));
 
         if (hook == null) {
-            throw new IllegalArgumentException(String.format(
-                    "Hooks execution plan contains unknown or disabled hook: stage=%s, hookId=%s", stage, hookId));
+            throw new IllegalArgumentException(
+                    "Hooks execution plan contains unknown or disabled hook: stage=%s, hookId=%s"
+                            .formatted(stage, hookId));
         }
     }
 
@@ -321,7 +340,7 @@ public class HookStageExecutor {
         final List<ExecutionGroup> combinedGroups = Stream.of(hostStageExecutionPlan, accountStageExecutionPlan)
                 .map(StageExecutionPlan::getGroups)
                 .flatMap(Collection::stream)
-                .collect(Collectors.toList());
+                .toList();
 
         return StageExecutionPlan.of(combinedGroups);
     }
@@ -346,26 +365,16 @@ public class HookStageExecutor {
         return (timeout, hookId, moduleContext) -> invocationContext(endpoint, timeout);
     }
 
+    private InvocationContextImpl invocationContext(Endpoint endpoint, Long timeout) {
+        return InvocationContextImpl.of(createTimeout(timeout), endpoint);
+    }
+
     private InvocationContextProvider<AuctionInvocationContext> auctionInvocationContextProvider(
             Endpoint endpoint,
             AuctionContext auctionContext) {
 
         return (timeout, hookId, moduleContext) -> auctionInvocationContext(
                 endpoint, timeout, auctionContext, hookId, moduleContext);
-    }
-
-    private InvocationContextProvider<BidderInvocationContext> bidderInvocationContextProvider(
-            Endpoint endpoint,
-            AuctionContext auctionContext,
-            String bidder) {
-
-        return (timeout, hookId, moduleContext) -> BidderInvocationContextImpl.of(
-                auctionInvocationContext(endpoint, timeout, auctionContext, hookId, moduleContext),
-                bidder);
-    }
-
-    private InvocationContextImpl invocationContext(Endpoint endpoint, Long timeout) {
-        return InvocationContextImpl.of(createTimeout(timeout), endpoint);
     }
 
     private AuctionInvocationContextImpl auctionInvocationContext(Endpoint endpoint,
@@ -379,6 +388,16 @@ public class HookStageExecutor {
                 auctionContext.getDebugContext().isDebugEnabled(),
                 accountConfigFor(auctionContext.getAccount(), hookId),
                 moduleContext);
+    }
+
+    private InvocationContextProvider<BidderInvocationContext> bidderInvocationContextProvider(
+            Endpoint endpoint,
+            AuctionContext auctionContext,
+            String bidder) {
+
+        return (timeout, hookId, moduleContext) -> BidderInvocationContextImpl.of(
+                auctionInvocationContext(endpoint, timeout, auctionContext, hookId, moduleContext),
+                bidder);
     }
 
     private Timeout createTimeout(Long timeout) {
