@@ -48,7 +48,6 @@ import javax.validation.constraints.NotNull;
 import java.time.Clock;
 import java.util.List;
 import java.util.Objects;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 @UtilityClass
@@ -134,22 +133,24 @@ public class SettingsConfiguration {
         }
 
         @Bean
-        JDBCClient vertxJdbcClient(Vertx vertx, StoredRequestsDatabaseProperties storedRequestsDatabaseProperties) {
-            final String jdbcUrl = String.format("%s//%s:%d/%s?%s",
-                    storedRequestsDatabaseProperties.getType().jdbcUrlPrefix,
-                    storedRequestsDatabaseProperties.getHost(),
-                    storedRequestsDatabaseProperties.getPort(),
-                    storedRequestsDatabaseProperties.getDbname(),
-                    storedRequestsDatabaseProperties.getType().jdbcUrlSuffix);
+        JDBCClient vertxJdbcClient(Vertx vertx, DatabaseSourceProperties databaseSourceProperties) {
+            final String jdbcUrl = "%s//%s:%d/%s?%s%s".formatted(
+                    databaseSourceProperties.getType().jdbcUrlPrefix,
+                    databaseSourceProperties.getHost(),
+                    databaseSourceProperties.getPort(),
+                    databaseSourceProperties.getDbname(),
+                    databaseSourceProperties.getType().jdbcUrlSuffix,
+                    databaseSourceProperties.getProviderClass().jdbcUrlSuffix);
 
             return JDBCClient.createShared(vertx, new JsonObject()
-                    .put("url", jdbcUrl)
-                    .put("user", storedRequestsDatabaseProperties.getUser())
-                    .put("password", storedRequestsDatabaseProperties.getPassword())
-                    .put("driver_class", storedRequestsDatabaseProperties.getType().jdbcDriver)
-                    .put("initial_pool_size", storedRequestsDatabaseProperties.getPoolSize())
-                    .put("min_pool_size", storedRequestsDatabaseProperties.getPoolSize())
-                    .put("max_pool_size", storedRequestsDatabaseProperties.getPoolSize()));
+                    .put(databaseSourceProperties.getProviderClass().url, jdbcUrl)
+                    .put(databaseSourceProperties.getProviderClass().user, databaseSourceProperties.getUser())
+                    .put("password", databaseSourceProperties.getPassword())
+                    .put("driver_class", databaseSourceProperties.getType().jdbcDriver)
+                    .put("initial_pool_size", databaseSourceProperties.getPoolSize())
+                    .put("min_pool_size", databaseSourceProperties.getPoolSize())
+                    .put("max_pool_size", databaseSourceProperties.getPoolSize())
+                    .put("provider_class", databaseSourceProperties.getProviderClass().jdbcCP));
         }
 
         @Component
@@ -158,7 +159,7 @@ public class SettingsConfiguration {
         @Validated
         @Data
         @NoArgsConstructor
-        private static class StoredRequestsDatabaseProperties {
+        private static class DatabaseSourceProperties {
 
             @NotNull
             private DbType type;
@@ -175,6 +176,8 @@ public class SettingsConfiguration {
             private String user;
             @NotBlank
             private String password;
+            @NotNull
+            private DbPoolType providerClass;
         }
 
         @AllArgsConstructor
@@ -184,6 +187,18 @@ public class SettingsConfiguration {
 
             private final String jdbcDriver;
             private final String jdbcUrlPrefix;
+            private final String jdbcUrlSuffix;
+        }
+
+        @AllArgsConstructor
+        private enum DbPoolType {
+            hikari("io.vertx.ext.jdbc.spi.impl.HikariCPDataSourceProvider", "jdbcUrl", "username",
+                    "&allowPublicKeyRetrieval=true"),
+            c3p0("io.vertx.ext.jdbc.spi.impl.C3P0DataSourceProvider", "url", "user", "");
+
+            private final String jdbcCP;
+            private final String url;
+            private final String user;
             private final String jdbcUrlSuffix;
         }
     }
@@ -329,7 +344,7 @@ public class SettingsConfiguration {
                                     jdbcApplicationSettings,
                                     httpApplicationSettings)
                             .filter(Objects::nonNull)
-                            .collect(Collectors.toList());
+                            .toList();
 
             return new CompositeApplicationSettings(applicationSettingsList);
         }
