@@ -22,11 +22,12 @@ import org.mockito.Mock;
 import org.mockito.junit.MockitoJUnit;
 import org.mockito.junit.MockitoRule;
 import org.prebid.server.VertxTest;
+import org.prebid.server.auction.BidderAliases;
 import org.prebid.server.auction.model.BidderRequest;
 import org.prebid.server.bidder.model.BidderBid;
+import org.prebid.server.bidder.model.BidderCall;
 import org.prebid.server.bidder.model.BidderError;
 import org.prebid.server.bidder.model.BidderSeatBid;
-import org.prebid.server.bidder.model.HttpCall;
 import org.prebid.server.bidder.model.HttpRequest;
 import org.prebid.server.bidder.model.HttpResponse;
 import org.prebid.server.bidder.model.Result;
@@ -46,7 +47,6 @@ import java.util.List;
 import java.util.Map;
 import java.util.concurrent.TimeoutException;
 import java.util.function.UnaryOperator;
-import java.util.stream.Collectors;
 
 import static java.util.Arrays.asList;
 import static java.util.Collections.emptyList;
@@ -77,6 +77,8 @@ public class HttpBidderRequesterTest extends VertxTest {
     @Mock
     private Bidder<BidRequest> bidder;
     @Mock
+    private BidderAliases bidderAliases;
+    @Mock
     private HttpClient httpClient;
     @Mock
     private BidderErrorNotifier bidderErrorNotifier;
@@ -97,7 +99,8 @@ public class HttpBidderRequesterTest extends VertxTest {
         given(bidderErrorNotifier.processTimeout(any(), any())).will(invocation -> invocation.getArgument(0));
         given(routingContext.request()).willReturn(httpServerRequest);
         given(httpServerRequest.headers()).willReturn(MultiMap.caseInsensitiveMultiMap());
-        given(requestEnricher.enrichHeaders(any(), any(), any())).willReturn(MultiMap.caseInsensitiveMultiMap());
+        given(requestEnricher.enrichHeaders(anyString(), any(), any(), any(), any()))
+                .willReturn(MultiMap.caseInsensitiveMultiMap());
 
         final Clock clock = Clock.fixed(Instant.now(), ZoneId.systemDefault());
         final TimeoutFactory timeoutFactory = new TimeoutFactory(clock);
@@ -113,11 +116,17 @@ public class HttpBidderRequesterTest extends VertxTest {
         // given
         given(bidder.makeHttpRequests(any())).willReturn(Result.of(emptyList(), emptyList()));
 
-        final BidderRequest bidderRequest = BidderRequest.of("bidder", null, BidRequest.builder().build());
+        final BidderRequest bidderRequest = BidderRequest.of("bidder", null, null, BidRequest.builder().build());
 
         // when
         final BidderSeatBid bidderSeatBid =
-                httpBidderRequester.requestBids(bidder, bidderRequest, timeout, CaseInsensitiveMultiMap.empty(), false)
+                httpBidderRequester.requestBids(
+                                bidder,
+                                bidderRequest,
+                                timeout,
+                                CaseInsensitiveMultiMap.empty(),
+                                bidderAliases,
+                                false)
                         .result();
 
         // then
@@ -134,11 +143,17 @@ public class HttpBidderRequesterTest extends VertxTest {
         given(bidder.makeHttpRequests(any())).willReturn(Result.of(emptyList(),
                 asList(BidderError.badInput("error1"), BidderError.badInput("error2"))));
 
-        final BidderRequest bidderRequest = BidderRequest.of("bidder", null, BidRequest.builder().build());
+        final BidderRequest bidderRequest = BidderRequest.of("bidder", null, null, BidRequest.builder().build());
 
         // when
         final BidderSeatBid bidderSeatBid =
-                httpBidderRequester.requestBids(bidder, bidderRequest, timeout, CaseInsensitiveMultiMap.empty(), false)
+                httpBidderRequester.requestBids(
+                                bidder,
+                                bidderRequest,
+                                timeout,
+                                CaseInsensitiveMultiMap.empty(),
+                                bidderAliases,
+                                false)
                         .result();
 
         // then
@@ -166,16 +181,18 @@ public class HttpBidderRequesterTest extends VertxTest {
         final List<BidderBid> bids = asList(BidderBid.of(null, null, null), BidderBid.of(null, null, null));
         given(bidder.makeBids(any(), any())).willReturn(Result.of(bids, emptyList()));
 
-        final BidderRequest bidderRequest = BidderRequest.of("bidder", "storedResponse", BidRequest.builder().build());
+        final BidderRequest bidderRequest = BidderRequest.of(
+                "bidder", null, "storedResponse", BidRequest.builder().build());
 
         // when
         final BidderSeatBid bidderSeatBid = httpBidderRequester
-                .requestBids(bidder, bidderRequest, timeout, CaseInsensitiveMultiMap.empty(), false)
+                .requestBids(bidder, bidderRequest, timeout, CaseInsensitiveMultiMap.empty(), bidderAliases, false)
                 .result();
 
         // then
         verifyNoInteractions(httpClient);
-        final ArgumentCaptor<HttpCall<BidRequest>> httpCallArgumentCaptor = ArgumentCaptor.forClass(HttpCall.class);
+        final ArgumentCaptor<BidderCall<BidRequest>> httpCallArgumentCaptor =
+                ArgumentCaptor.forClass(BidderCall.class);
         verify(bidder).makeBids(httpCallArgumentCaptor.capture(), any());
         assertThat(httpCallArgumentCaptor.getValue().getResponse())
                 .extracting(HttpResponse::getBody)
@@ -205,10 +222,17 @@ public class HttpBidderRequesterTest extends VertxTest {
                                 .build()),
                 emptyList()));
 
-        final BidderRequest bidderRequest = BidderRequest.of("bidder", "storedResponse", BidRequest.builder().build());
+        final BidderRequest bidderRequest = BidderRequest.of(
+                "bidder", null, "storedResponse", BidRequest.builder().build());
 
         // when
-        httpBidderRequester.requestBids(bidder, bidderRequest, timeout, CaseInsensitiveMultiMap.empty(), false);
+        httpBidderRequester.requestBids(
+                bidder,
+                bidderRequest,
+                timeout,
+                CaseInsensitiveMultiMap.empty(),
+                bidderAliases,
+                false);
 
         // then
         verify(httpClient, times(2)).request(any(), anyString(), any(), any(byte[].class), anyLong());
@@ -226,10 +250,17 @@ public class HttpBidderRequesterTest extends VertxTest {
                                 .build()),
                 emptyList()));
 
-        final BidderRequest bidderRequest = BidderRequest.of("bidder", null, BidRequest.builder().build());
+        final BidderRequest bidderRequest = BidderRequest.of("bidder", null, null, BidRequest.builder().build());
 
         // when
-        httpBidderRequester.requestBids(bidder, bidderRequest, timeout, CaseInsensitiveMultiMap.empty(), false);
+        httpBidderRequester
+                .requestBids(
+                        bidder,
+                        bidderRequest,
+                        timeout,
+                        CaseInsensitiveMultiMap.empty(),
+                        bidderAliases,
+                        false);
 
         // then
         verify(httpClient).request(any(), anyString(), any(), (byte[]) isNull(), anyLong());
@@ -256,10 +287,16 @@ public class HttpBidderRequesterTest extends VertxTest {
                                 .build()),
                 emptyList()));
 
-        final BidderRequest bidderRequest = BidderRequest.of("bidder", null, BidRequest.builder().build());
+        final BidderRequest bidderRequest = BidderRequest.of("bidder", null, null, BidRequest.builder().build());
 
         // when
-        httpBidderRequester.requestBids(bidder, bidderRequest, timeout, CaseInsensitiveMultiMap.empty(), false);
+        httpBidderRequester.requestBids(
+                bidder,
+                bidderRequest,
+                timeout,
+                CaseInsensitiveMultiMap.empty(),
+                bidderAliases,
+                false);
 
         // then
         verify(httpClient, times(2)).request(any(), anyString(), any(), any(byte[].class), anyLong());
@@ -282,11 +319,18 @@ public class HttpBidderRequesterTest extends VertxTest {
         final List<BidderBid> bids = asList(BidderBid.of(null, null, null), BidderBid.of(null, null, null));
         given(bidder.makeBids(any(), any())).willReturn(Result.of(bids, emptyList()));
 
-        final BidderRequest bidderRequest = BidderRequest.of("bidder", null, BidRequest.builder().build());
+        final BidderRequest bidderRequest = BidderRequest.of("bidder", null, null, BidRequest.builder().build());
 
         // when
         final BidderSeatBid bidderSeatBid =
-                httpBidderRequester.requestBids(bidder, bidderRequest, timeout, CaseInsensitiveMultiMap.empty(), false)
+                httpBidderRequester
+                        .requestBids(
+                                bidder,
+                                bidderRequest,
+                                timeout,
+                                CaseInsensitiveMultiMap.empty(),
+                                bidderAliases,
+                                false)
                         .result();
 
         // then
@@ -307,12 +351,18 @@ public class HttpBidderRequesterTest extends VertxTest {
                                 .build()),
                 emptyList()));
 
-        given(requestEnricher.enrichHeaders(any(), any(), any())).willReturn(headers);
+        given(requestEnricher.enrichHeaders(anyString(), any(), any(), any(), any())).willReturn(headers);
         givenHttpClientResponse(200, "responseBody");
-        final BidderRequest bidderRequest = BidderRequest.of("bidder", null, BidRequest.builder().build());
+        final BidderRequest bidderRequest = BidderRequest.of("bidder", null, null, BidRequest.builder().build());
 
         // when
-        httpBidderRequester.requestBids(bidder, bidderRequest, timeout, CaseInsensitiveMultiMap.empty(), false)
+        httpBidderRequester.requestBids(
+                        bidder,
+                        bidderRequest,
+                        timeout,
+                        CaseInsensitiveMultiMap.empty(),
+                        bidderAliases,
+                        false)
                 .result();
 
         // then
@@ -328,7 +378,7 @@ public class HttpBidderRequesterTest extends VertxTest {
                 bidderErrorNotifier, requestEnricher, jacksonMapper);
 
         final BidRequest bidRequest = bidRequestWithDeals("deal1", "deal2");
-        final BidderRequest bidderRequest = BidderRequest.of("bidder", null, bidRequest);
+        final BidderRequest bidderRequest = BidderRequest.of("bidder", null, null, bidRequest);
         final BidRequest firstRequest = givenBidRequest(bidRequestBuilder -> bidRequestBuilder.id("r1"));
         final byte[] firstRequestBody = mapper.writeValueAsBytes(firstRequest);
         final BidRequest secondRequest = givenBidRequest(bidRequestBuilder -> bidRequestBuilder.id("r2"));
@@ -392,7 +442,7 @@ public class HttpBidderRequesterTest extends VertxTest {
         // when
         final BidderSeatBid bidderSeatBid =
                 httpBidderRequester.requestBids(
-                                bidder, bidderRequest, timeout, CaseInsensitiveMultiMap.empty(), false)
+                                bidder, bidderRequest, timeout, CaseInsensitiveMultiMap.empty(), bidderAliases, false)
                         .result();
 
         // then
@@ -407,7 +457,7 @@ public class HttpBidderRequesterTest extends VertxTest {
     public void shouldFinishWhenAllDealRequestsAreFinishedAndNoDealsProvided() {
         // given
         final BidRequest bidRequest = bidRequestWithDeals("deal1", "deal2", "deal2");
-        final BidderRequest bidderRequest = BidderRequest.of("bidder", null, bidRequest);
+        final BidderRequest bidderRequest = BidderRequest.of("bidder", null, null, bidRequest);
 
         given(bidder.makeHttpRequests(any())).willReturn(Result.of(Arrays.asList(
                         HttpRequest.<BidRequest>builder()
@@ -448,7 +498,7 @@ public class HttpBidderRequesterTest extends VertxTest {
         // when
         final BidderSeatBid bidderSeatBid =
                 httpBidderRequester.requestBids(
-                                bidder, bidderRequest, timeout, CaseInsensitiveMultiMap.empty(), false)
+                                bidder, bidderRequest, timeout, CaseInsensitiveMultiMap.empty(), bidderAliases, false)
                         .result();
 
         // then
@@ -482,7 +532,7 @@ public class HttpBidderRequesterTest extends VertxTest {
                                 .build()),
                 emptyList()));
 
-        given(requestEnricher.enrichHeaders(any(), any(), any())).willReturn(headers);
+        given(requestEnricher.enrichHeaders(anyString(), any(), any(), any(), any())).willReturn(headers);
 
         givenHttpClientReturnsResponses(
                 HttpClientResponse.of(200, null, "responseBody1"),
@@ -490,23 +540,35 @@ public class HttpBidderRequesterTest extends VertxTest {
 
         given(bidder.makeBids(any(), any())).willReturn(Result.of(emptyList(), emptyList()));
 
-        final BidderRequest bidderRequest = BidderRequest.of("bidder", null, BidRequest.builder().build());
+        final BidderRequest bidderRequest = BidderRequest.of("bidder", null, null, BidRequest.builder().build());
 
         // when
         final BidderSeatBid bidderSeatBid =
-                httpBidderRequester.requestBids(bidder, bidderRequest, timeout, CaseInsensitiveMultiMap.empty(), true)
+                httpBidderRequester.requestBids(
+                                bidder,
+                                bidderRequest,
+                                timeout,
+                                CaseInsensitiveMultiMap.empty(),
+                                bidderAliases,
+                                true)
                         .result();
 
         // then
-        assertThat(bidderSeatBid.getHttpCalls()).hasSize(2).containsOnly(
-                ExtHttpCall.builder().uri("uri1").requestbody(mapper.writeValueAsString(firstBidRequest))
+        assertThat(bidderSeatBid.getHttpCalls()).containsExactlyInAnyOrder(
+                ExtHttpCall.builder()
+                        .uri("uri1")
+                        .requestbody(mapper.writeValueAsString(firstBidRequest))
                         .responsebody("responseBody1")
                         .requestheaders(singletonMap("headerKey", singletonList("headerValue")))
-                        .status(200).build(),
-                ExtHttpCall.builder().uri("uri2").requestbody(mapper.writeValueAsString(secondBidRequest))
+                        .status(200)
+                        .build(),
+                ExtHttpCall.builder()
+                        .uri("uri2")
+                        .requestbody(mapper.writeValueAsString(secondBidRequest))
                         .responsebody("responseBody2")
                         .requestheaders(singletonMap("headerKey", singletonList("headerValue")))
-                        .status(200).build());
+                        .status(200)
+                        .build());
     }
 
     @Test
@@ -523,17 +585,23 @@ public class HttpBidderRequesterTest extends VertxTest {
                                 .headers(headers)
                                 .build()),
                 emptyList()));
-        given(requestEnricher.enrichHeaders(any(), any(), any())).willReturn(headers);
+        given(requestEnricher.enrichHeaders(anyString(), any(), any(), any(), any())).willReturn(headers);
 
         givenHttpClientReturnsResponses(
                 HttpClientResponse.of(200, null, "responseBody1"));
 
-        final BidderRequest bidderRequest = BidderRequest.of("bidder", null, BidRequest.builder().build());
+        final BidderRequest bidderRequest = BidderRequest.of("bidder", null, null, BidRequest.builder().build());
 
         // when
         final BidderSeatBid bidderSeatBid =
                 httpBidderRequester
-                        .requestBids(bidder, bidderRequest, timeout, CaseInsensitiveMultiMap.empty(), true).result();
+                        .requestBids(
+                                bidder,
+                                bidderRequest,
+                                timeout,
+                                CaseInsensitiveMultiMap.empty(),
+                                bidderAliases,
+                                true).result();
 
         // then
         assertThat(bidderSeatBid.getHttpCalls())
@@ -558,18 +626,20 @@ public class HttpBidderRequesterTest extends VertxTest {
                                 .build()),
                 emptyList()));
 
-        given(requestEnricher.enrichHeaders(any(), any(), any())).willReturn(headers);
+        given(requestEnricher.enrichHeaders(anyString(), any(), any(), any(), any())).willReturn(headers);
 
-        final BidderRequest bidderRequest = BidderRequest.of("bidder", null, BidRequest.builder().build());
+        final BidderRequest bidderRequest = BidderRequest.of("bidder", null, null, BidRequest.builder().build());
 
         // when
         final BidderSeatBid bidderSeatBid =
                 httpBidderRequester.requestBids(bidder, bidderRequest, expiredTimeout, CaseInsensitiveMultiMap.empty(),
-                        true).result();
+                        bidderAliases, true).result();
 
         // then
-        assertThat(bidderSeatBid.getHttpCalls()).hasSize(1).containsOnly(
-                ExtHttpCall.builder().uri("uri1").requestbody(mapper.writeValueAsString(givenBidRequest))
+        assertThat(bidderSeatBid.getHttpCalls()).containsExactly(
+                ExtHttpCall.builder()
+                        .uri("uri1")
+                        .requestbody(mapper.writeValueAsString(givenBidRequest))
                         .requestheaders(singletonMap("headerKey", singletonList("headerValue")))
                         .build());
     }
@@ -589,20 +659,28 @@ public class HttpBidderRequesterTest extends VertxTest {
                                 .build()),
                 emptyList()));
 
-        given(requestEnricher.enrichHeaders(any(), any(), any())).willReturn(headers);
+        given(requestEnricher.enrichHeaders(anyString(), any(), any(), any(), any())).willReturn(headers);
 
         givenHttpClientProducesException(new RuntimeException("Request exception"));
 
-        final BidderRequest bidderRequest = BidderRequest.of("bidder", null, BidRequest.builder().build());
+        final BidderRequest bidderRequest = BidderRequest.of("bidder", null, null, BidRequest.builder().build());
 
         // when
         final BidderSeatBid bidderSeatBid =
-                httpBidderRequester.requestBids(bidder, bidderRequest, timeout, CaseInsensitiveMultiMap.empty(), true)
+                httpBidderRequester
+                        .requestBids(
+                                bidder,
+                                bidderRequest,
+                                timeout,
+                                CaseInsensitiveMultiMap.empty(),
+                                bidderAliases,
+                                true)
                         .result();
 
         // then
-        assertThat(bidderSeatBid.getHttpCalls()).hasSize(1).containsOnly(
-                ExtHttpCall.builder().uri("uri1")
+        assertThat(bidderSeatBid.getHttpCalls()).containsExactly(
+                ExtHttpCall.builder()
+                        .uri("uri1")
                         .requestbody(mapper.writeValueAsString(givenBidRequest))
                         .requestheaders(singletonMap("headerKey", singletonList("headerValue")))
                         .build());
@@ -623,26 +701,36 @@ public class HttpBidderRequesterTest extends VertxTest {
                                 .build()),
                 emptyList()));
 
-        given(requestEnricher.enrichHeaders(any(), any(), any())).willReturn(headers);
+        given(requestEnricher.enrichHeaders(anyString(), any(), any(), any(), any())).willReturn(headers);
 
         givenHttpClientReturnsResponses(HttpClientResponse.of(500, null, "responseBody1"));
 
-        final BidderRequest bidderRequest = BidderRequest.of("bidder", null, BidRequest.builder().build());
+        final BidderRequest bidderRequest = BidderRequest.of("bidder", null, null, BidRequest.builder().build());
 
         // when
         final BidderSeatBid bidderSeatBid =
-                httpBidderRequester.requestBids(bidder, bidderRequest, timeout, CaseInsensitiveMultiMap.empty(), true)
+                httpBidderRequester
+                        .requestBids(
+                                bidder,
+                                bidderRequest,
+                                timeout,
+                                CaseInsensitiveMultiMap.empty(),
+                                bidderAliases,
+                                true)
                         .result();
 
         // then
-        assertThat(bidderSeatBid.getHttpCalls()).hasSize(1).containsOnly(
-                ExtHttpCall.builder().uri("uri1").requestbody(mapper.writeValueAsString(givenBidRequest))
+        assertThat(bidderSeatBid.getHttpCalls()).containsExactly(
+                ExtHttpCall.builder()
+                        .uri("uri1")
+                        .requestbody(mapper.writeValueAsString(givenBidRequest))
                         .responsebody("responseBody1")
                         .requestheaders(singletonMap("headerKey", singletonList("headerValue")))
                         .status(500).build());
-        assertThat(bidderSeatBid.getErrors()).hasSize(1)
-                .extracting(BidderError::getMessage).containsOnly(
-                        "Unexpected status code: 500. Run with request.test = 1 for more info");
+
+        assertThat(bidderSeatBid.getErrors())
+                .extracting(BidderError::getMessage)
+                .containsExactly("Unexpected status code: 500. Run with request.test = 1 for more info");
     }
 
     @Test
@@ -657,12 +745,12 @@ public class HttpBidderRequesterTest extends VertxTest {
                                 .build()),
                 emptyList()));
 
-        final BidderRequest bidderRequest = BidderRequest.of("bidder", null, BidRequest.builder().build());
+        final BidderRequest bidderRequest = BidderRequest.of("bidder", null, null, BidRequest.builder().build());
 
         // when
         final BidderSeatBid bidderSeatBid =
                 httpBidderRequester.requestBids(bidder, bidderRequest, expiredTimeout, CaseInsensitiveMultiMap.empty(),
-                        false).result();
+                        bidderAliases, false).result();
 
         // then
         assertThat(bidderSeatBid.getErrors()).hasSize(1)
@@ -686,10 +774,11 @@ public class HttpBidderRequesterTest extends VertxTest {
                 // bidder request
                 .willReturn(Future.failedFuture(new TimeoutException("Timeout exception")));
 
-        final BidderRequest bidderRequest = BidderRequest.of("bidder", null, BidRequest.builder().build());
+        final BidderRequest bidderRequest = BidderRequest.of("bidder", null, null, BidRequest.builder().build());
 
         // when
-        httpBidderRequester.requestBids(bidder, bidderRequest, timeout, CaseInsensitiveMultiMap.empty(), false);
+        httpBidderRequester
+                .requestBids(bidder, bidderRequest, timeout, CaseInsensitiveMultiMap.empty(), bidderAliases, false);
 
         // then
         verify(bidderErrorNotifier).processTimeout(any(), same(bidder));
@@ -742,7 +831,7 @@ public class HttpBidderRequesterTest extends VertxTest {
                                 .headers(MultiMap.caseInsensitiveMultiMap())
                                 .build()),
                 singletonList(BidderError.badInput("makeHttpRequestsError"))));
-        when(requestEnricher.enrichHeaders(any(), any(), any()))
+        when(requestEnricher.enrichHeaders(anyString(), any(), any(), any(), any()))
                 .thenAnswer(invocation -> MultiMap.caseInsensitiveMultiMap());
         given(httpClient.request(any(), anyString(), any(), any(byte[].class), anyLong()))
                 // simulate response error for the first request
@@ -762,11 +851,11 @@ public class HttpBidderRequesterTest extends VertxTest {
                 Result.of(singletonList(BidderBid.of(Bid.builder().impid("123").build(), null, null)),
                         singletonList(BidderError.badServerResponse("makeBidsError"))));
 
-        final BidderRequest bidderRequest = BidderRequest.of("bidder", null, BidRequest.builder().build());
+        final BidderRequest bidderRequest = BidderRequest.of("bidder", null, null, BidRequest.builder().build());
 
         // when
         final BidderSeatBid bidderSeatBid = httpBidderRequester
-                .requestBids(bidder, bidderRequest, timeout, CaseInsensitiveMultiMap.empty(), false)
+                .requestBids(bidder, bidderRequest, timeout, CaseInsensitiveMultiMap.empty(), bidderAliases, false)
                 .result();
 
         // then
@@ -796,10 +885,12 @@ public class HttpBidderRequesterTest extends VertxTest {
 
         givenHttpClientResponse(204, EMPTY);
 
-        final BidderRequest bidderRequest = BidderRequest.of("bidder", null, BidRequest.builder().test(1).build());
+        final BidderRequest bidderRequest = BidderRequest.of(
+                "bidder", null, null, BidRequest.builder().test(1).build());
 
         // when
-        httpBidderRequester.requestBids(bidder, bidderRequest, timeout, CaseInsensitiveMultiMap.empty(), false);
+        httpBidderRequester
+                .requestBids(bidder, bidderRequest, timeout, CaseInsensitiveMultiMap.empty(), bidderAliases, false);
 
         // then
         verify(bidder, never()).makeBids(any(), any());
@@ -818,7 +909,7 @@ public class HttpBidderRequesterTest extends VertxTest {
     private static BidRequest bidRequestWithDeals(String... ids) {
         final List<Imp> impsWithDeals = Arrays.stream(ids)
                 .map(HttpBidderRequesterTest::impWithDeal)
-                .collect(Collectors.toList());
+                .toList();
         return BidRequest.builder().imp(impsWithDeals).build();
     }
 
