@@ -1,25 +1,24 @@
 package org.prebid.server.bidder.sovrn;
 
 import com.fasterxml.jackson.core.JsonProcessingException;
-import com.iab.openrtb.request.Audio;
 import com.iab.openrtb.request.Banner;
 import com.iab.openrtb.request.BidRequest;
 import com.iab.openrtb.request.Device;
 import com.iab.openrtb.request.Format;
 import com.iab.openrtb.request.Imp;
-import com.iab.openrtb.request.Native;
 import com.iab.openrtb.request.Regs;
 import com.iab.openrtb.request.User;
 import com.iab.openrtb.request.Video;
 import com.iab.openrtb.response.Bid;
 import com.iab.openrtb.response.BidResponse;
 import com.iab.openrtb.response.SeatBid;
+import io.vertx.core.MultiMap;
 import org.junit.Before;
 import org.junit.Test;
 import org.prebid.server.VertxTest;
 import org.prebid.server.bidder.model.BidderBid;
+import org.prebid.server.bidder.model.BidderCall;
 import org.prebid.server.bidder.model.BidderError;
-import org.prebid.server.bidder.model.HttpCall;
 import org.prebid.server.bidder.model.HttpRequest;
 import org.prebid.server.bidder.model.HttpResponse;
 import org.prebid.server.bidder.model.Result;
@@ -27,17 +26,18 @@ import org.prebid.server.proto.openrtb.ext.ExtPrebid;
 import org.prebid.server.proto.openrtb.ext.request.ExtRegs;
 import org.prebid.server.proto.openrtb.ext.request.ExtUser;
 import org.prebid.server.proto.openrtb.ext.request.sovrn.ExtImpSovrn;
-import org.prebid.server.proto.openrtb.ext.response.BidType;
 
+import java.io.IOException;
 import java.math.BigDecimal;
-import java.util.Collections;
 import java.util.List;
-import java.util.Map;
+import java.util.function.UnaryOperator;
 
-import static java.util.Collections.emptyList;
 import static java.util.Collections.singletonList;
+import static java.util.Map.Entry;
+import static java.util.function.UnaryOperator.identity;
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.assertj.core.api.Assertions.tuple;
+import static org.prebid.server.proto.openrtb.ext.response.BidType.video;
 
 public class SovrnBidderTest extends VertxTest {
 
@@ -51,148 +51,98 @@ public class SovrnBidderTest extends VertxTest {
     }
 
     @Test
-    public void makeHttpRequestsShouldSkipImpAndAddErrorIfRequestContainsNotSupportedAudioMediaType() {
+    public void makeHttpRequestsShouldSkipImpAndAddErrorIfRequestContainsVideoWithoutProtocols() {
         // given
-        final BidRequest bidRequest = BidRequest.builder()
-                .imp(Collections.singletonList(Imp.builder().id("impId").audio(Audio.builder().build())
-                        .build()))
-                .build();
+        final BidRequest bidRequest = givenBidRequest(impBuilder -> impBuilder
+                .video(Video.builder().protocols(null).build()));
 
         // when
         final Result<List<HttpRequest<BidRequest>>> result = sovrnBidder.makeHttpRequests(bidRequest);
 
         // then
+        assertThat(result.getErrors()).containsExactly(BidderError.badInput("Missing required video parameter"));
         assertThat(result.getValue()).hasSize(1)
-                .extracting(httpRequest -> mapper.readValue(httpRequest.getBody(), BidRequest.class))
+                .extracting(HttpRequest::getPayload)
                 .flatExtracting(BidRequest::getImp)
                 .isEmpty();
-        assertThat(result.getErrors()).hasSize(1)
-                .containsExactly(BidderError.badInput(
-                        "Sovrn doesn't support audio, video, or native Imps. Ignoring Imp ID=impId"));
     }
 
     @Test
-    public void makeHttpRequestsShouldSkipImpAndAddErrorIfRequestContainsNotSupportedVideoMediaType() {
+    public void makeHttpRequestsShouldSkipImpAndAddErrorIfRequestContainsVideoAndVideoHasMaxAndMinDurationZero() {
         // given
-        final BidRequest bidRequest = BidRequest.builder()
-                .imp(Collections.singletonList(Imp.builder().id("impId").video(Video.builder().build())
-                        .build()))
-                .build();
+        final BidRequest bidRequest = givenBidRequest(impBuilder -> impBuilder
+                .video(Video.builder()
+                        .mimes(List.of())
+                        .maxduration(0)
+                        .minduration(0)
+                        .build()));
 
         // when
         final Result<List<HttpRequest<BidRequest>>> result = sovrnBidder.makeHttpRequests(bidRequest);
 
         // then
+        assertThat(result.getErrors()).containsExactly(BidderError.badInput("Missing required video parameter"));
         assertThat(result.getValue()).hasSize(1)
-                .extracting(httpRequest -> mapper.readValue(httpRequest.getBody(), BidRequest.class))
+                .extracting(HttpRequest::getPayload)
                 .flatExtracting(BidRequest::getImp)
                 .isEmpty();
-        assertThat(result.getErrors()).hasSize(1)
-                .containsExactly(BidderError.badInput(
-                        "Sovrn doesn't support audio, video, or native Imps. Ignoring Imp ID=impId"));
     }
 
     @Test
-    public void makeHttpRequestsShouldSkipImpAndAddErrorIfRequestContainsNotSupportedNativeMediaType() {
+    public void makeHttpRequestsShouldSkipImpAndAddErrorIfRequestContainsVideoAndVideoHasMaxAndMinDurationIsEmpty() {
         // given
-        final BidRequest bidRequest = BidRequest.builder()
-                .imp(Collections.singletonList(Imp.builder().id("23").xNative(Native.builder().build())
-                        .build()))
-                .build();
+        final BidRequest bidRequest = givenBidRequest(impBuilder -> impBuilder
+                .video(Video.builder()
+                        .mimes(List.of())
+                        .maxduration(null)
+                        .minduration(null)
+                        .build()));
 
         // when
         final Result<List<HttpRequest<BidRequest>>> result = sovrnBidder.makeHttpRequests(bidRequest);
 
         // then
+        assertThat(result.getErrors()).containsExactly(BidderError.badInput("Missing required video parameter"));
         assertThat(result.getValue()).hasSize(1)
-                .extracting(httpRequest -> mapper.readValue(httpRequest.getBody(), BidRequest.class))
+                .extracting(HttpRequest::getPayload)
                 .flatExtracting(BidRequest::getImp)
                 .isEmpty();
-        assertThat(result.getErrors()).hasSize(1)
-                .containsExactly(BidderError.badInput(
-                        "Sovrn doesn't support audio, video, or native Imps. Ignoring Imp ID=23"));
-    }
-
-    @Test
-    public void makeHttpRequestsShouldReturnResultWithErrorSayingAboutMissingSovrnParams() {
-        // given
-        final BidRequest bidRequest = BidRequest.builder()
-                .imp(Collections.singletonList(Imp.builder().build()))
-                .build();
-
-        // when
-        final Result<List<HttpRequest<BidRequest>>> result = sovrnBidder.makeHttpRequests(bidRequest);
-
-        // then
-        assertThat(result.getValue()).hasSize(1)
-                .extracting(httpRequest -> mapper.readValue(httpRequest.getBody(), BidRequest.class))
-                .flatExtracting(BidRequest::getImp)
-                .isEmpty();
-        assertThat(result.getErrors()).hasSize(1)
-                .containsExactly(BidderError.badInput("Sovrn parameters section is missing"));
     }
 
     @Test
     public void makeHttpRequestsShouldReturnResultWithHttpRequestContainingExpectedFieldsInBidRequest() {
         // given
-        final BidRequest bidRequest = BidRequest.builder()
-                .imp(Collections.singletonList(
-                        Imp.builder().id("impId")
-                                .banner(Banner.builder()
-                                        .format(singletonList(Format.builder().w(200).h(300).build()))
-                                        .w(200)
-                                        .h(300)
-                                        .build())
-                                .ext(mapper.valueToTree(ExtPrebid.of(null, ExtImpSovrn.of("tagid", null, null))))
-                                .build()))
-                .user(User.builder().ext(ExtUser.builder().consent("consent").build()).build())
-                .regs(Regs.of(null, ExtRegs.of(1, null)))
-                .build();
+        final BidRequest bidRequest = givenBidRequest(identity());
 
         // when
         final Result<List<HttpRequest<BidRequest>>> result = sovrnBidder.makeHttpRequests(bidRequest);
 
         // then
-        assertThat(result.getValue()).hasSize(1)
+        assertThat(result.getValue())
                 .extracting(HttpRequest::getBody)
-                .extracting(body -> mapper.readValue(body, BidRequest.class))
-                .containsExactly(BidRequest.builder()
-                        .imp(singletonList(Imp.builder()
-                                .id("impId")
-                                .ext(mapper.valueToTree(ExtPrebid.of(null, ExtImpSovrn.of("tagid", null, null))))
-                                .banner(Banner.builder()
-                                        .format(singletonList(Format.builder().w(200).h(300).build()))
-                                        .w(200)
-                                        .h(300)
-                                        .build())
-                                .tagid("tagid")
-                                .bidfloor(null)
-                                .build()))
-                        .user(User.builder()
-                                .ext(ExtUser.builder().consent("consent").build())
-                                .build())
-                        .regs(Regs.of(null, ExtRegs.of(1, null)))
-                        .build());
+                .extracting(SovrnBidderTest::mappedToBidRequest)
+                .flatExtracting(BidRequest::getImp)
+                .extracting(Imp::getBidfloor, Imp::getTagid)
+                .containsExactly(tuple(BigDecimal.TEN, "tagid"));
     }
 
     @Test
     public void makeHttpRequestsShouldSetBidFloorFromExtIfImpBidFloorIsZero() {
         // given
-        final BidRequest bidRequest = BidRequest.builder()
-                .imp(Collections.singletonList(
-                        Imp.builder().id("impId")
-                                .bidfloor(BigDecimal.ZERO)
-                                .ext(mapper.valueToTree(ExtPrebid.of(null, ExtImpSovrn.of(null, null, BigDecimal.TEN))))
-                                .build()))
-                .build();
+        final BidRequest bidRequest = givenBidRequest(impBuilder -> impBuilder
+                .banner(Banner.builder().format(singletonList(Format.builder().w(200).h(300).build()))
+                        .w(200)
+                        .h(300)
+                        .build())
+                .bidfloor(BigDecimal.ZERO));
 
         // when
         final Result<List<HttpRequest<BidRequest>>> result = sovrnBidder.makeHttpRequests(bidRequest);
 
         // then
-        assertThat(result.getValue()).hasSize(1)
+        assertThat(result.getValue())
                 .extracting(HttpRequest::getBody)
-                .extracting(body -> mapper.readValue(body, BidRequest.class))
+                .extracting(SovrnBidderTest::mappedToBidRequest)
                 .flatExtracting(BidRequest::getImp)
                 .extracting(Imp::getBidfloor)
                 .containsExactly(BigDecimal.TEN);
@@ -201,13 +151,7 @@ public class SovrnBidderTest extends VertxTest {
     @Test
     public void makeHttpRequestsShouldSetBidFloorFromExtIfImpBidFloorIsMissed() {
         // given
-        final BidRequest bidRequest = BidRequest.builder()
-                .imp(Collections.singletonList(
-                        Imp.builder().id("impId")
-                                .bidfloor(null)
-                                .ext(mapper.valueToTree(ExtPrebid.of(null, ExtImpSovrn.of(null, null, BigDecimal.TEN))))
-                                .build()))
-                .build();
+        final BidRequest bidRequest = givenBidRequest(identity());
 
         // when
         final Result<List<HttpRequest<BidRequest>>> result = sovrnBidder.makeHttpRequests(bidRequest);
@@ -215,7 +159,7 @@ public class SovrnBidderTest extends VertxTest {
         // then
         assertThat(result.getValue()).hasSize(1)
                 .extracting(HttpRequest::getBody)
-                .extracting(body -> mapper.readValue(body, BidRequest.class))
+                .extracting(SovrnBidderTest::mappedToBidRequest)
                 .flatExtracting(BidRequest::getImp)
                 .extracting(Imp::getBidfloor)
                 .containsExactly(BigDecimal.TEN);
@@ -224,13 +168,12 @@ public class SovrnBidderTest extends VertxTest {
     @Test
     public void makeHttpRequestsShouldNotSetBidFloorFromExtIfImpBidFloorIsValid() {
         // given
-        final BidRequest bidRequest = BidRequest.builder()
-                .imp(Collections.singletonList(
-                        Imp.builder().id("impId")
-                                .bidfloor(BigDecimal.ONE)
-                                .ext(mapper.valueToTree(ExtPrebid.of(null, ExtImpSovrn.of(null, null, BigDecimal.TEN))))
-                                .build()))
-                .build();
+        final BidRequest bidRequest = givenBidRequest(impBuilder -> impBuilder
+                .banner(Banner.builder().format(singletonList(Format.builder().w(200).h(300).build()))
+                        .w(200)
+                        .h(300)
+                        .build())
+                .bidfloor(BigDecimal.ONE));
 
         // when
         final Result<List<HttpRequest<BidRequest>>> result = sovrnBidder.makeHttpRequests(bidRequest);
@@ -238,7 +181,7 @@ public class SovrnBidderTest extends VertxTest {
         // then
         assertThat(result.getValue()).hasSize(1)
                 .extracting(HttpRequest::getBody)
-                .extracting(body -> mapper.readValue(body, BidRequest.class))
+                .extracting(SovrnBidderTest::mappedToBidRequest)
                 .flatExtracting(BidRequest::getImp)
                 .extracting(Imp::getBidfloor)
                 .containsExactly(BigDecimal.ONE);
@@ -247,7 +190,7 @@ public class SovrnBidderTest extends VertxTest {
     @Test
     public void makeHttpRequestsShouldReturnResultWithHttpRequestsContainingExpectedHeaders() {
         // given
-        final BidRequest bidRequest = BidRequest.builder()
+        final BidRequest bidRequest = givenBidRequest(bidRequestBuilder -> bidRequestBuilder
                 .device(Device.builder()
                         .ua("userAgent")
                         .language("fr")
@@ -256,17 +199,16 @@ public class SovrnBidderTest extends VertxTest {
                         .build())
                 .user(User.builder()
                         .buyeruid("701")
-                        .build())
-                .imp(Collections.singletonList(Imp.builder().build()))
-                .build();
+                        .build()), identity());
 
         // when
         final Result<List<HttpRequest<BidRequest>>> result = sovrnBidder.makeHttpRequests(bidRequest);
 
         // then
         assertThat(result.getValue()).hasSize(1)
-                .flatExtracting(r -> r.getHeaders().entries())
-                .extracting(Map.Entry::getKey, Map.Entry::getValue)
+                .extracting(HttpRequest::getHeaders)
+                .flatExtracting(MultiMap::entries)
+                .extracting(Entry::getKey, Entry::getValue)
                 .containsOnly(
                         tuple("Content-Type", "application/json;charset=utf-8"),
                         tuple("Accept", "application/json"),
@@ -280,13 +222,7 @@ public class SovrnBidderTest extends VertxTest {
     @Test
     public void makeHttpRequestShouldReturnImpWithTagidIfBothTagidAndLegacyTagIdDefined() {
         // given
-        final BidRequest bidRequest = BidRequest.builder()
-                .imp(Collections.singletonList(
-                        Imp.builder()
-                                .ext(mapper.valueToTree(
-                                        ExtPrebid.of(null, ExtImpSovrn.of("tagid", "legacyTagId", null))))
-                                .build()))
-                .build();
+        final BidRequest bidRequest = givenBidRequest(identity());
 
         // when
         final Result<List<HttpRequest<BidRequest>>> result = sovrnBidder.makeHttpRequests(bidRequest);
@@ -294,7 +230,7 @@ public class SovrnBidderTest extends VertxTest {
         // then
         assertThat(result.getValue()).hasSize(1)
                 .extracting(HttpRequest::getBody)
-                .extracting(body -> mapper.readValue(body, BidRequest.class))
+                .extracting(SovrnBidderTest::mappedToBidRequest)
                 .flatExtracting(BidRequest::getImp)
                 .extracting(Imp::getTagid)
                 .containsOnly("tagid");
@@ -303,12 +239,14 @@ public class SovrnBidderTest extends VertxTest {
     @Test
     public void makeHttpRequestShouldReturnImpWithTagidFromLegacyIfTagIdIsEmpty() {
         // given
-        final BidRequest bidRequest = BidRequest.builder()
-                .imp(Collections.singletonList(
-                        Imp.builder()
-                                .ext(mapper.valueToTree(ExtPrebid.of(null, ExtImpSovrn.of(null, "legacyTagId", null))))
-                                .build()))
-                .build();
+        final BidRequest bidRequest = givenBidRequest(impBuilder -> impBuilder
+                .id("impId")
+                .banner(Banner.builder()
+                        .format(singletonList(Format.builder().w(200).h(300).build()))
+                        .w(200)
+                        .h(300)
+                        .build())
+                .ext(mapper.valueToTree(ExtPrebid.of(null, ExtImpSovrn.of(null, "legacyTagId", null)))));
 
         // when
         final Result<List<HttpRequest<BidRequest>>> result = sovrnBidder.makeHttpRequests(bidRequest);
@@ -316,44 +254,43 @@ public class SovrnBidderTest extends VertxTest {
         // then
         assertThat(result.getValue()).hasSize(1)
                 .extracting(HttpRequest::getBody)
-                .extracting(body -> mapper.readValue(body, BidRequest.class))
+                .extracting(SovrnBidderTest::mappedToBidRequest)
                 .flatExtracting(BidRequest::getImp)
                 .extracting(Imp::getTagid)
                 .containsOnly("legacyTagId");
     }
 
     @Test
-    public void makeHttpRequestsShouldReturnEmptyResultWhenMissingBidRequestImps() {
-        assertThat(sovrnBidder.makeHttpRequests(BidRequest.builder().build()))
-                .isEqualTo(Result.of(emptyList(), emptyList()));
-    }
-
-    @Test
     public void makeHttpRequestsShouldReturnErrorIfImpExtCouldNotBeParsed() {
         // given
-        final BidRequest bidRequest = BidRequest.builder()
-                .imp(singletonList(
-                        Imp.builder()
-                                .ext(mapper.valueToTree(ExtPrebid.of(null, mapper.createArrayNode())))
-                                .build()))
-                .build();
+        final BidRequest bidRequest = givenBidRequest(impBuilder -> impBuilder
+                .id("impId")
+                .banner(Banner.builder()
+                        .format(singletonList(Format.builder().w(200).h(300).build()))
+                        .w(200)
+                        .h(300)
+                        .build())
+                .ext(mapper.valueToTree(ExtPrebid.of(null, mapper.createArrayNode()))));
 
         // when
         final Result<List<HttpRequest<BidRequest>>> result = sovrnBidder.makeHttpRequests(bidRequest);
 
         // then
-        assertThat(result.getErrors()).hasSize(1);
-        assertThat(result.getErrors().get(0).getMessage()).startsWith("Cannot deserialize value");
         assertThat(result.getValue()).hasSize(1);
+        assertThat(result.getErrors()).hasSize(1)
+                .allSatisfy(error -> {
+                    assertThat(error.getType()).isEqualTo(BidderError.Type.bad_input);
+                    assertThat(error.getMessage()).startsWith("Cannot deserialize value");
+                });
     }
 
     @Test
     public void makeHttpRequestsShouldSetRequestUrlWithoutMemberIdIfItMissedRequestBodyImps() {
+        //given
+        final BidRequest bidRequest = givenBidRequest(identity());
 
         // when
-        final Result<List<HttpRequest<BidRequest>>> result = sovrnBidder.makeHttpRequests(BidRequest.builder()
-                .imp(singletonList(Imp.builder().build()))
-                .build());
+        final Result<List<HttpRequest<BidRequest>>> result = sovrnBidder.makeHttpRequests(bidRequest);
 
         // then
         assertThat(result.getValue()).hasSize(1)
@@ -361,80 +298,175 @@ public class SovrnBidderTest extends VertxTest {
     }
 
     @Test
-    public void makeBidsShouldReturnErrorIfResponseBodyCouldNotBeParsed() {
+    public void makeHttpRequestsShouldSkipImpAndAddErrorIfRequestNotContainsBothTagidAndLegacyTagid() {
         // given
-        final HttpCall<BidRequest> httpCall = givenHttpCall("invalid");
+        final BidRequest bidRequest = givenBidRequest(impBuilder -> impBuilder
+                .ext(mapper.valueToTree(ExtPrebid.of(null, ExtImpSovrn.of(null, "", null)))));
 
         // when
-        final Result<List<BidderBid>> result = sovrnBidder.makeBids(httpCall, BidRequest.builder().build());
+        final Result<List<HttpRequest<BidRequest>>> result = sovrnBidder.makeHttpRequests(bidRequest);
 
         // then
+        assertThat(result.getErrors()).containsExactly(BidderError.badInput("Missing required parameter 'tagid'"));
+        assertThat(result.getValue()).hasSize(1)
+                .extracting(HttpRequest::getPayload)
+                .flatExtracting(BidRequest::getImp)
+                .isEmpty();
+    }
+
+    @Test
+    public void makeBidsShouldReturnErrorIfResponseBodyCouldNotBeParsed() throws JsonProcessingException {
+        // given
+        final BidderCall<BidRequest> httpCall = givenHttpCall(null, "invalid");
+
+        // when
+        final Result<List<BidderBid>> result = sovrnBidder.makeBids(httpCall, null);
+
+        // then
+        assertThat(result.getValue()).isEmpty();
         assertThat(result.getErrors()).hasSize(1)
                 .allMatch(error -> error.getType() == BidderError.Type.bad_server_response
                         && error.getMessage().startsWith("Failed to decode: Unrecognized token 'invalid'"));
-        assertThat(result.getValue()).isEmpty();
     }
 
     @Test
     public void makeBidsShouldReturnResultWithExpectedFields() throws JsonProcessingException {
         // given
-        final HttpCall<BidRequest> httpCall = givenHttpCall(mapper.writeValueAsString(BidResponse.builder()
-                .cur("EUR")
-                .seatbid(singletonList(SeatBid.builder()
-                        .bid(singletonList(Bid.builder()
-                                .w(200)
-                                .h(150)
-                                .price(BigDecimal.ONE)
-                                .impid("impid")
-                                .dealid("dealid")
-                                .adm("<div>This is an Ad</div>")
-                                .build()))
-                        .build()))
-                .build()));
+        final BidderCall<BidRequest> httpCall = givenHttpCall(givenBidRequest(impBuilder -> impBuilder.id("impid")),
+                mapper.writeValueAsString(givenBidResponse(bidBuilder -> bidBuilder
+                        .impid("impid")
+                        .w(200)
+                        .h(150)
+                        .adm("<div>This is an Ad</div>")
+                        .dealid("dealid")
+                        .price(BigDecimal.ONE))));
 
         // when
-        final Result<List<BidderBid>> result = sovrnBidder.makeBids(httpCall, BidRequest.builder().build());
+        final Result<List<BidderBid>> result = sovrnBidder.makeBids(httpCall, null);
 
         // then
+        final BidderBid expectedBidderBid = BidderBid.of(
+                Bid.builder()
+                        .impid("impid")
+                        .w(200)
+                        .h(150)
+                        .adm("<div>This is an Ad</div>")
+                        .dealid("dealid")
+                        .price(BigDecimal.ONE)
+                        .build(),
+                video, "EUR");
+
         assertThat(result.getErrors()).isEmpty();
-        assertThat(result.getValue()).hasSize(1)
-                .containsOnly(BidderBid.of(
-                        Bid.builder()
-                                .impid("impid")
-                                .price(BigDecimal.ONE)
-                                .dealid("dealid")
-                                .w(200)
-                                .h(150)
-                                .adm("<div>This is an Ad</div>")
-                                .build(),
-                        BidType.banner, "EUR"));
+        assertThat(result.getValue()).containsExactly(expectedBidderBid);
     }
 
     @Test
     public void makeBidsShouldReturnDecodedUrlInAdmField() throws JsonProcessingException {
-        // given
-        final HttpCall<BidRequest> httpCall = givenHttpCall(mapper.writeValueAsString(BidResponse.builder()
-                .seatbid(singletonList(SeatBid.builder()
-                        .bid(singletonList(Bid.builder()
-                                .w(200)
-                                .h(150)
-                                .price(BigDecimal.ONE)
-                                .impid("impid")
-                                .dealid("dealid")
-                                .adm("encoded+url+test")
-                                .build()))
-                        .build()))
-                .build()));
+        //given
+        final BidderCall<BidRequest> httpCall = givenHttpCall(givenBidRequest(identity()),
+                mapper.writeValueAsString(givenBidResponse(bidBuilder -> bidBuilder.impid("123")
+                        .adm("encoded+url+test"))));
 
         // when
-        final Result<List<BidderBid>> result = sovrnBidder.makeBids(httpCall, BidRequest.builder().build());
+        final Result<List<BidderBid>> result = sovrnBidder.makeBids(httpCall, null);
 
         // then
         assertThat(result.getValue()).hasSize(1).element(0)
                 .returns("encoded url test", bidderBid -> bidderBid.getBid().getAdm());
     }
 
-    private static HttpCall<BidRequest> givenHttpCall(String body) {
-        return HttpCall.success(null, HttpResponse.of(200, null, body), null);
+    @Test
+    public void makeBidsShouldReturnVideoBidderBid() throws JsonProcessingException {
+        //given
+        final BidderCall<BidRequest> httpCall = givenHttpCall(givenBidRequest(identity()),
+                mapper.writeValueAsString(givenBidResponse(bidBuilder -> bidBuilder.impid("123"))));
+
+        // when
+        final Result<List<BidderBid>> result = sovrnBidder.makeBids(httpCall, null);
+
+        // then
+        assertThat(result.getValue())
+                .containsExactly(BidderBid.of(Bid.builder().impid("123").build(), video, "EUR"));
+    }
+
+    @Test
+    public void makeBidsShouldReturnErrorIfBidImpIdAndBidRequestImpIdDoesntMatch() throws JsonProcessingException {
+        //given
+        final BidderCall<BidRequest> httpCall = givenHttpCall(givenBidRequest(identity()),
+                mapper.writeValueAsString(givenBidResponse(bidBuilder -> bidBuilder.impid("unknownId"))));
+
+        // when
+        final Result<List<BidderBid>> result = sovrnBidder.makeBids(httpCall, null);
+
+        // then
+        assertThat(result.getValue()).isEmpty();
+        assertThat(result.getErrors())
+                .allSatisfy(bidderError -> {
+                    assertThat(bidderError.getType()).isEqualTo(BidderError.Type.bad_input);
+                    assertThat(bidderError.getMessage()).startsWith("Imp ID unknownId in bid didn't match with "
+                            + "any imp in the original request");
+                });
+    }
+
+    @Test
+    public void makeBidsShouldReturnEmptyListIfBidResponseSeatBidIsNull() throws JsonProcessingException {
+        // given
+        final BidderCall<BidRequest> httpCall = givenHttpCall(null,
+                mapper.writeValueAsString(BidResponse.builder().build()));
+
+        // when
+        final Result<List<BidderBid>> result = sovrnBidder.makeBids(httpCall, null);
+
+        // then
+        assertThat(result.getErrors()).isEmpty();
+        assertThat(result.getValue()).isEmpty();
+    }
+
+    private static BidRequest mappedToBidRequest(byte[] value) throws IOException {
+        return mapper.readValue(value, BidRequest.class);
+    }
+
+    private static BidRequest givenBidRequest(
+            UnaryOperator<BidRequest.BidRequestBuilder> bidRequestCustomizer,
+            UnaryOperator<Imp.ImpBuilder> impCustomizer) {
+
+        return bidRequestCustomizer.apply(BidRequest.builder()
+                        .imp(singletonList(givenImp(impCustomizer)))
+                        .user(User.builder().ext(ExtUser.builder().consent("consent").build()).build())
+                        .regs(Regs.builder().ext(ExtRegs.of(1, null)).build()))
+                .build();
+    }
+
+    private static BidRequest givenBidRequest(UnaryOperator<Imp.ImpBuilder> impCustomizer) {
+        return givenBidRequest(identity(), impCustomizer);
+    }
+
+    private static Imp givenImp(UnaryOperator<Imp.ImpBuilder> impCustomizer) {
+        return impCustomizer.apply(Imp.builder()
+                        .id("123")
+                        .video(Video.builder()
+                                .mimes(singletonList("mp4"))
+                                .maxduration(1)
+                                .minduration(1)
+                                .protocols(singletonList(1))
+                                .build())
+                        .ext(mapper.valueToTree(ExtPrebid.of(null, ExtImpSovrn.of("tagid",
+                                "legacyTagId", BigDecimal.TEN)))))
+                .build();
+    }
+
+    private static BidResponse givenBidResponse(UnaryOperator<Bid.BidBuilder> bidCustomizer) {
+        return BidResponse.builder()
+                .seatbid(singletonList(SeatBid.builder().bid(singletonList(bidCustomizer.apply(Bid.builder()).build()))
+                        .build()))
+                .cur("EUR")
+                .build();
+    }
+
+    private static BidderCall<BidRequest> givenHttpCall(BidRequest bidRequest, String body) {
+        return BidderCall.succeededHttp(
+                HttpRequest.<BidRequest>builder().payload(bidRequest).build(),
+                HttpResponse.of(200, null, body),
+                null);
     }
 }
