@@ -47,6 +47,7 @@ import org.prebid.server.hooks.execution.model.StageExecutionPlan;
 import org.prebid.server.hooks.execution.model.StageWithHookType;
 import org.prebid.server.hooks.execution.v1.auction.AuctionRequestPayloadImpl;
 import org.prebid.server.hooks.execution.v1.auction.AuctionResponsePayloadImpl;
+import org.prebid.server.hooks.execution.v1.bidder.AllProcessedBidResponsesPayloadImpl;
 import org.prebid.server.hooks.execution.v1.bidder.BidderRequestPayloadImpl;
 import org.prebid.server.hooks.execution.v1.bidder.BidderResponsePayloadImpl;
 import org.prebid.server.hooks.execution.v1.entrypoint.EntrypointPayloadImpl;
@@ -65,6 +66,8 @@ import org.prebid.server.hooks.v1.auction.AuctionResponseHook;
 import org.prebid.server.hooks.v1.auction.AuctionResponsePayload;
 import org.prebid.server.hooks.v1.auction.ProcessedAuctionRequestHook;
 import org.prebid.server.hooks.v1.auction.RawAuctionRequestHook;
+import org.prebid.server.hooks.v1.bidder.AllProcessedBidResponsesHook;
+import org.prebid.server.hooks.v1.bidder.AllProcessedBidResponsesPayload;
 import org.prebid.server.hooks.v1.bidder.BidderInvocationContext;
 import org.prebid.server.hooks.v1.bidder.BidderRequestHook;
 import org.prebid.server.hooks.v1.bidder.BidderRequestPayload;
@@ -85,7 +88,8 @@ import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.function.BiFunction;
-import java.util.stream.Collectors;
+import java.util.function.Function;
+import java.util.function.UnaryOperator;
 
 import static java.util.Arrays.asList;
 import static java.util.Collections.emptyList;
@@ -232,8 +236,10 @@ public class HookStageExecutorTest extends VertxTest {
         givenEntrypointHook(
                 "module-alpha",
                 "hook-a",
-                immediateHook(InvocationResultImpl.succeeded(payload -> EntrypointPayloadImpl.of(
-                        payload.queryParams(), payload.headers(), payload.body() + "-abc"))));
+                immediateHook(InvocationResultImpl.succeeded(
+                        payload -> EntrypointPayloadImpl.of(
+                                payload.queryParams(), payload.headers(), payload.body() + "-abc"),
+                        "moduleAlphaContext")));
 
         givenEntrypointHook(
                 "module-alpha",
@@ -250,8 +256,10 @@ public class HookStageExecutorTest extends VertxTest {
         givenEntrypointHook(
                 "module-beta",
                 "hook-b",
-                immediateHook(InvocationResultImpl.succeeded(payload -> EntrypointPayloadImpl.of(
-                        payload.queryParams(), payload.headers(), payload.body() + "-jkl"))));
+                immediateHook(InvocationResultImpl.succeeded(
+                        payload -> EntrypointPayloadImpl.of(
+                                payload.queryParams(), payload.headers(), payload.body() + "-jkl"),
+                        "moduleBetaContext")));
 
         final HookStageExecutor executor = createExecutor(
                 executionPlan(singletonMap(
@@ -326,10 +334,15 @@ public class HookStageExecutorTest extends VertxTest {
                                         });
                                     }));
 
+            final Map<String, Object> expectedModuleContexts = new HashMap<>();
+            expectedModuleContexts.put("module-alpha", null);
+            expectedModuleContexts.put("module-beta", "moduleBetaContext");
+            assertThat(hookExecutionContext.getModuleContexts()).containsExactlyEntriesOf(expectedModuleContexts);
+
             async.complete();
         }));
 
-        async.awaitSuccess(150L);
+        async.awaitSuccess();
     }
 
     @Test
@@ -1938,10 +1951,10 @@ public class HookStageExecutorTest extends VertxTest {
 
         // when
         final Future<HookStageExecutionResult<BidderRequestPayload>> future1 = executor.executeBidderRequestStage(
-                BidderRequest.of("bidder1", null, BidRequest.builder().build()),
+                BidderRequest.of("bidder1", null, null, BidRequest.builder().build()),
                 auctionContext);
         final Future<HookStageExecutionResult<BidderRequestPayload>> future2 = executor.executeBidderRequestStage(
-                BidderRequest.of("bidder2", null, BidRequest.builder().build()),
+                BidderRequest.of("bidder2", null, null, BidRequest.builder().build()),
                 auctionContext);
 
         // then
@@ -1989,7 +2002,7 @@ public class HookStageExecutorTest extends VertxTest {
 
         // when
         final Future<HookStageExecutionResult<BidderRequestPayload>> future = executor.executeBidderRequestStage(
-                BidderRequest.of("bidder1", null, BidRequest.builder().build()),
+                BidderRequest.of("bidder1", null, null, BidRequest.builder().build()),
                 AuctionContext.builder()
                         .bidRequest(BidRequest.builder().build())
                         .account(Account.builder()
@@ -2032,7 +2045,7 @@ public class HookStageExecutorTest extends VertxTest {
                                         bid.getBid().toBuilder().id("bidId").build(),
                                         bid.getType(),
                                         bid.getBidCurrency()))
-                                .collect(Collectors.toList())))));
+                                .toList()))));
 
         givenRawBidderResponseHook(
                 "module-alpha",
@@ -2043,7 +2056,7 @@ public class HookStageExecutorTest extends VertxTest {
                                         bid.getBid().toBuilder().adid("adId").build(),
                                         bid.getType(),
                                         bid.getBidCurrency()))
-                                .collect(Collectors.toList())))));
+                                .toList()))));
 
         givenRawBidderResponseHook(
                 "module-beta",
@@ -2054,7 +2067,7 @@ public class HookStageExecutorTest extends VertxTest {
                                         bid.getBid().toBuilder().cid("cid").build(),
                                         bid.getType(),
                                         bid.getBidCurrency()))
-                                .collect(Collectors.toList())))));
+                                .toList()))));
 
         givenRawBidderResponseHook(
                 "module-beta",
@@ -2065,7 +2078,7 @@ public class HookStageExecutorTest extends VertxTest {
                                         bid.getBid().toBuilder().adm("adm").build(),
                                         bid.getType(),
                                         bid.getBidCurrency()))
-                                .collect(Collectors.toList())))));
+                                .toList()))));
 
         final HookStageExecutor executor = createExecutor(
                 executionPlan(singletonMap(
@@ -2086,17 +2099,11 @@ public class HookStageExecutorTest extends VertxTest {
         final Future<HookStageExecutionResult<BidderResponsePayload>> future1 = executor.executeRawBidderResponseStage(
                 BidderResponse.of(
                         "bidder1",
-                        BidderSeatBid.of(
-                                singletonList(BidderBid.of(Bid.builder().build(), BidType.banner, "USD")),
-                                emptyList(),
-                                emptyList()),
+                        BidderSeatBid.of(singletonList(BidderBid.of(Bid.builder().build(), BidType.banner, "USD"))),
                         0),
                 auctionContext);
         final Future<HookStageExecutionResult<BidderResponsePayload>> future2 = executor.executeRawBidderResponseStage(
-                BidderResponse.of(
-                        "bidder2",
-                        BidderSeatBid.of(emptyList(), emptyList(), emptyList()),
-                        0),
+                BidderResponse.of("bidder2", BidderSeatBid.empty(), 0),
                 auctionContext);
 
         // then
@@ -2149,10 +2156,7 @@ public class HookStageExecutorTest extends VertxTest {
         final Future<HookStageExecutionResult<BidderResponsePayload>> future = executor.executeRawBidderResponseStage(
                 BidderResponse.of(
                         "bidder1",
-                        BidderSeatBid.of(
-                                singletonList(BidderBid.of(Bid.builder().build(), BidType.banner, "USD")),
-                                emptyList(),
-                                emptyList()),
+                        BidderSeatBid.of(singletonList(BidderBid.of(Bid.builder().build(), BidType.banner, "USD"))),
                         0),
                 AuctionContext.builder()
                         .bidRequest(BidRequest.builder().build())
@@ -2196,7 +2200,7 @@ public class HookStageExecutorTest extends VertxTest {
                                         bid.getBid().toBuilder().id("bidId").build(),
                                         bid.getType(),
                                         bid.getBidCurrency()))
-                                .collect(Collectors.toList())))));
+                                .toList()))));
 
         givenProcessedBidderResponseHook(
                 "module-alpha",
@@ -2207,7 +2211,7 @@ public class HookStageExecutorTest extends VertxTest {
                                         bid.getBid().toBuilder().adid("adId").build(),
                                         bid.getType(),
                                         bid.getBidCurrency()))
-                                .collect(Collectors.toList())))));
+                                .toList()))));
 
         givenProcessedBidderResponseHook(
                 "module-beta",
@@ -2218,7 +2222,7 @@ public class HookStageExecutorTest extends VertxTest {
                                         bid.getBid().toBuilder().cid("cid").build(),
                                         bid.getType(),
                                         bid.getBidCurrency()))
-                                .collect(Collectors.toList())))));
+                                .toList()))));
 
         givenProcessedBidderResponseHook(
                 "module-beta",
@@ -2229,7 +2233,7 @@ public class HookStageExecutorTest extends VertxTest {
                                         bid.getBid().toBuilder().adm("adm").build(),
                                         bid.getType(),
                                         bid.getBidCurrency()))
-                                .collect(Collectors.toList())))));
+                                .toList()))));
 
         final HookStageExecutor executor = createExecutor(
                 executionPlan(singletonMap(
@@ -2251,18 +2255,13 @@ public class HookStageExecutorTest extends VertxTest {
                 executor.executeProcessedBidderResponseStage(
                         BidderResponse.of(
                                 "bidder1",
-                                BidderSeatBid.of(
-                                        singletonList(BidderBid.of(Bid.builder().build(), BidType.banner, "USD")),
-                                        emptyList(),
-                                        emptyList()),
+                                BidderSeatBid.of(singletonList(
+                                        BidderBid.of(Bid.builder().build(), BidType.banner, "USD"))),
                                 0),
                         auctionContext);
         final Future<HookStageExecutionResult<BidderResponsePayload>> future2 =
                 executor.executeProcessedBidderResponseStage(
-                        BidderResponse.of(
-                                "bidder2",
-                                BidderSeatBid.of(emptyList(), emptyList(), emptyList()),
-                                0),
+                        BidderResponse.of("bidder2", BidderSeatBid.empty(), 0),
                         auctionContext);
 
         // then
@@ -2317,10 +2316,8 @@ public class HookStageExecutorTest extends VertxTest {
                 executor.executeProcessedBidderResponseStage(
                         BidderResponse.of(
                                 "bidder1",
-                                BidderSeatBid.of(
-                                        singletonList(BidderBid.of(Bid.builder().build(), BidType.banner, "USD")),
-                                        emptyList(),
-                                        emptyList()),
+                                BidderSeatBid.of(singletonList(
+                                        BidderBid.of(Bid.builder().build(), BidType.banner, "USD"))),
                                 0),
                         AuctionContext.builder()
                                 .bidRequest(BidRequest.builder().build())
@@ -2353,6 +2350,173 @@ public class HookStageExecutorTest extends VertxTest {
     }
 
     @Test
+    public void shouldExecuteAllProcessedBidResponsesHooksHappyPath() {
+        final Function<BiFunction<String, BidderBid, BidderBid>, UnaryOperator<BidderResponse>> bidModifierForResponse =
+                (BiFunction<String, BidderBid, BidderBid> bidModifier) ->
+                        (BidderResponse response) -> {
+                            final BidderSeatBid seatBid = response.getSeatBid();
+                            final List<BidderBid> modifiedBids = seatBid.getBids().stream()
+                                    .map(bidderBid -> bidModifier.apply(response.getBidder(), bidderBid))
+                                    .toList();
+                            return response.with(seatBid.with(modifiedBids));
+                        };
+
+        // given
+        givenAllProcessedBidderResponsesHook(
+                "module-alpha",
+                "hook-a",
+                immediateHook(InvocationResultImpl.succeeded(payload -> AllProcessedBidResponsesPayloadImpl.of(
+                        payload.bidResponses().stream()
+                                .map(bidModifierForResponse.apply(
+                                        (bidder, bid) -> BidderBid.of(
+                                                bid.getBid().toBuilder().id(bidder + "-bidId").build(),
+                                                bid.getType(),
+                                                bid.getBidCurrency())))
+                                .toList()))));
+
+        givenAllProcessedBidderResponsesHook(
+                "module-alpha",
+                "hook-b",
+                immediateHook(InvocationResultImpl.succeeded(payload -> AllProcessedBidResponsesPayloadImpl.of(
+                        payload.bidResponses().stream()
+                                .map(bidModifierForResponse.apply(
+                                        (bidder, bid) -> BidderBid.of(
+                                                bid.getBid().toBuilder().adid(bidder + "-adId").build(),
+                                                bid.getType(),
+                                                bid.getBidCurrency())))
+                                .toList()))));
+
+        givenAllProcessedBidderResponsesHook(
+                "module-beta",
+                "hook-a",
+                immediateHook(InvocationResultImpl.succeeded(payload -> AllProcessedBidResponsesPayloadImpl.of(
+                        payload.bidResponses().stream()
+                                .map(bidModifierForResponse.apply(
+                                        (bidder, bid) -> BidderBid.of(
+                                                bid.getBid().toBuilder().cid(bidder + "-cid").build(),
+                                                bid.getType(),
+                                                bid.getBidCurrency())))
+                                .toList()))));
+
+        givenAllProcessedBidderResponsesHook(
+                "module-beta",
+                "hook-b",
+                immediateHook(InvocationResultImpl.succeeded(payload -> AllProcessedBidResponsesPayloadImpl.of(
+                        payload.bidResponses().stream()
+                                .map(bidModifierForResponse.apply(
+                                        (bidder, bid) -> BidderBid.of(
+                                                bid.getBid().toBuilder().adm(bidder + "-adm").build(),
+                                                bid.getType(),
+                                                bid.getBidCurrency())))
+                                .toList()))));
+
+        final HookStageExecutor executor = createExecutor(
+                executionPlan(singletonMap(
+                        Endpoint.openrtb2_auction,
+                        EndpointExecutionPlan.of(singletonMap(
+                                Stage.all_processed_bid_responses,
+                                execPlanTwoGroupsTwoHooksEach())))));
+
+        final HookExecutionContext hookExecutionContext = HookExecutionContext.of(Endpoint.openrtb2_auction);
+        final AuctionContext auctionContext = AuctionContext.builder()
+                .bidRequest(BidRequest.builder().build())
+                .account(Account.empty("accountId"))
+                .hookExecutionContext(hookExecutionContext)
+                .debugContext(DebugContext.empty())
+                .build();
+
+        // when
+        final Future<HookStageExecutionResult<AllProcessedBidResponsesPayload>> result =
+                executor.executeAllProcessedBidResponsesStage(
+                        List.of(
+                                BidderResponse.of(
+                                        "bidder1",
+                                        BidderSeatBid.of(singletonList(
+                                                BidderBid.of(Bid.builder().build(), BidType.banner, "USD"))), 0),
+                                BidderResponse.of("bidder2",
+                                        BidderSeatBid.of(singletonList(
+                                                BidderBid.of(Bid.builder().build(), BidType.video, "UAH"))), 0)),
+                        auctionContext);
+
+        // then
+        final Bid expectedBid1 = Bid.builder()
+                .id("bidder1-bidId")
+                .adid("bidder1-adId")
+                .cid("bidder1-cid")
+                .adm("bidder1-adm")
+                .build();
+        final Bid expectedBid2 = Bid.builder()
+                .id("bidder2-bidId")
+                .adid("bidder2-adId")
+                .cid("bidder2-cid")
+                .adm("bidder2-adm")
+                .build();
+
+        final List<BidderResponse> expectedBidderResponses = List.of(
+                BidderResponse.of("bidder1", BidderSeatBid.of(singletonList(
+                        BidderBid.of(expectedBid1, BidType.banner, "USD"))), 0),
+                BidderResponse.of("bidder2", BidderSeatBid.of(singletonList(
+                        BidderBid.of(expectedBid2, BidType.video, "UAH"))), 0));
+
+        assertThat(result).succeededWith(
+                HookStageExecutionResult.of(false, AllProcessedBidResponsesPayloadImpl.of(expectedBidderResponses)));
+    }
+
+    @Test
+    public void shouldExecuteAllProcessedBidResponsesHooksAndPassAuctionInvocationContext(TestContext context) {
+        // given
+        final AllProcessedBidResponsesHookImpl hookImpl = spy(
+                AllProcessedBidResponsesHookImpl.of(immediateHook(InvocationResultImpl.succeeded(identity()))));
+        given(hookCatalog.hookById(eq("module-alpha"), eq("hook-a"), eq(StageWithHookType.ALL_PROCESSED_BID_RESPONSES)))
+                .willReturn(hookImpl);
+
+        final HookStageExecutor executor = createExecutor(
+                executionPlan(singletonMap(
+                        Endpoint.openrtb2_auction,
+                        EndpointExecutionPlan.of(singletonMap(
+                                Stage.all_processed_bid_responses,
+                                execPlanOneGroupOneHook("module-alpha", "hook-a"))))));
+
+        final HookExecutionContext hookExecutionContext = HookExecutionContext.of(Endpoint.openrtb2_auction);
+
+        // when
+        final Future<HookStageExecutionResult<AllProcessedBidResponsesPayload>> future =
+                executor.executeAllProcessedBidResponsesStage(
+                        singletonList(BidderResponse.of(
+                                "bidder1",
+                                BidderSeatBid.of(singletonList(
+                                        BidderBid.of(Bid.builder().build(), BidType.banner, "USD"))),
+                                0)),
+                        AuctionContext.builder()
+                                .bidRequest(BidRequest.builder().build())
+                                .account(Account.builder()
+                                        .hooks(AccountHooksConfiguration.of(
+                                                null, singletonMap("module-alpha", mapper.createObjectNode())))
+                                        .build())
+                                .hookExecutionContext(hookExecutionContext)
+                                .debugContext(DebugContext.empty())
+                                .build());
+
+        // then
+        final Async async = context.async();
+        future.onComplete(context.asyncAssertSuccess(result -> {
+            final ArgumentCaptor<AuctionInvocationContext> invocationContextCaptor =
+                    ArgumentCaptor.forClass(AuctionInvocationContext.class);
+            verify(hookImpl).call(any(), invocationContextCaptor.capture());
+
+            assertThat(invocationContextCaptor.getValue()).satisfies(invocationContext -> {
+                assertThat(invocationContext.endpoint()).isNotNull();
+                assertThat(invocationContext.timeout()).isNotNull();
+                assertThat(invocationContext.accountConfig()).isNotNull();
+            });
+
+            async.complete();
+        }));
+
+        async.awaitSuccess();
+    }
+
+    @Test
     public void shouldExecuteBidderRequestHooksWhenRequestIsRejected(TestContext context) {
         // given
         givenBidderRequestHook(
@@ -2370,7 +2534,7 @@ public class HookStageExecutorTest extends VertxTest {
 
         // when
         final Future<HookStageExecutionResult<BidderRequestPayload>> future = executor.executeBidderRequestStage(
-                BidderRequest.of("bidder1", null, BidRequest.builder().build()),
+                BidderRequest.of("bidder1", null, null, BidRequest.builder().build()),
                 AuctionContext.builder()
                         .account(Account.empty("accountId"))
                         .hookExecutionContext(hookExecutionContext)
@@ -2654,6 +2818,18 @@ public class HookStageExecutorTest extends VertxTest {
                 .willReturn(ProcessedBidderResponseHookImpl.of(delegate));
     }
 
+    private void givenAllProcessedBidderResponsesHook(
+            String moduleCode,
+            String hookImplCode,
+            BiFunction<
+                    AllProcessedBidResponsesPayload,
+                    AuctionInvocationContext,
+                    Future<InvocationResult<AllProcessedBidResponsesPayload>>> delegate) {
+
+        given(hookCatalog.hookById(eq(moduleCode), eq(hookImplCode), eq(StageWithHookType.ALL_PROCESSED_BID_RESPONSES)))
+                .willReturn(AllProcessedBidResponsesHookImpl.of(delegate));
+    }
+
     private void givenAuctionResponseHook(
             String moduleCode,
             String hookImplCode,
@@ -2829,6 +3005,31 @@ public class HookStageExecutorTest extends VertxTest {
         @Override
         public Future<InvocationResult<BidderResponsePayload>> call(BidderResponsePayload payload,
                                                                     BidderInvocationContext invocationContext) {
+
+            return delegate.apply(payload, invocationContext);
+        }
+
+        @Override
+        public String code() {
+            return code;
+        }
+    }
+
+    @Value(staticConstructor = "of")
+    @NonFinal
+    private static class AllProcessedBidResponsesHookImpl implements AllProcessedBidResponsesHook {
+
+        String code = "hook-code";
+
+        BiFunction<
+                AllProcessedBidResponsesPayload,
+                AuctionInvocationContext,
+                Future<InvocationResult<AllProcessedBidResponsesPayload>>> delegate;
+
+        @Override
+        public Future<InvocationResult<AllProcessedBidResponsesPayload>> call(
+                AllProcessedBidResponsesPayload payload,
+                AuctionInvocationContext invocationContext) {
 
             return delegate.apply(payload, invocationContext);
         }
